localization updates and fixes

--- a/src/main/resources/password/pwm/i18n/Display_de.properties
+++ b/src/main/resources/password/pwm/i18n/Display_de.properties
@@ -1,4 +1,4 @@
-#Mon, 04 Apr 2016 05:53:55 -0400
+#Tue, 08 Nov 2016 18:41:50 -0500
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -81,6 +81,7 @@ Display_CommunicationError=Kommunikation mit dem Server nicht m\u00f6glich. Fahr
 Display_ConfirmResponses=Vergewissern Sie sich, dass die Antworten und Fragen richtig sind. \u00dcberpr\u00fcfen Sie die Rechtschreibung und Zeichensetzung. Wenn Sie Ihr Passwort vergessen, k\u00f6nnen Sie durch Beantworten dieser Sicherheitsfragen auf Ihr Konto zugreifen.
 Display_Day=Tag
 Display_Days=Tage
+Display_DeleteUserConfirm=Sind Sie sicher, dass das Konto gel\u00f6scht werden soll? Dies kann nicht r\u00fcckg\u00e4ngig gemacht werden.
 Display_ErrorBody=Fehler. Schlie\u00dfen Sie den Browser und versuchen Sie es sp\u00e4ter erneut. Wenn dieser Fehler wiederholt auftritt, wenden Sie sich an den Helpdesk.
 Display_ErrorReference=Fehlerreferenz %1%
 Display_ExpirationDate=Kontoablaufdatum (h\u00f6chstens %1% Tage)
@@ -94,13 +95,14 @@ Display_HelpdeskOtpValidation=Weisen Sie den Benutzer an, die Mobil-Authentifizi
 Display_Hour=Stunde
 Display_Hours=Stunden
 Display_IdleTimeout=Zeit\u00fcberschreitung nach Inaktivit\u00e4t\:
-Display_IdleWarningMessage=Bei der Browsersitzung tritt in K\u00fcrze eine Zeit\u00fcberschreitung ein. Klicken Sie auf eine beliebige Stelle dieser Seite, um die Sitzung wieder aufzunehmen.
+Display_IdleWarningMessage=Bei der Sitzung tritt in K\u00fcrze eine Zeit\u00fcberschreitung ein. Klicken Sie auf eine beliebige Stelle dieser Seite, um die Sitzung wieder aufzunehmen.
 Display_IdleWarningTitle=Zeit\u00fcberschreitung nach Inaktivit\u00e4t
 Display_JavascriptRequired=Zum Anzeigen dieser Seite ist JavaScript erforderlich.
 Display_LeaveDirtyPasswordPage=Wenn Sie diese Seite verlassen, wird das Passwort nicht ge\u00e4ndert.
 Display_Login=
 Display_LoginPasswordOnly=Geben Sie unten das Passwort ein. F\u00fcr den Zugriff auf diese Anwendung ist das aktuelle Passwort erforderlich.
-Display_Logout=<b>Sie sind nun abgemeldet.</b><p/>Schlie\u00dfen Sie alle Fenster des Internetbrowsers, bevor Sie erneut versuchen, sich anzumelden.
+Display_Logout=Sie sind jetzt abgemeldet.
+Display_LogoutPublic=Ihre Sitzung wurde aufgrund einer Zeit\u00fcberschreitung nach Inaktivit\u00e4t beendet.
 Display_Minute=Minute
 Display_Minutes=Minuten
 Display_NAAF_PASSWORD=Geben Sie das Passwort f\u00fcr die NAAF-Authentifizierung ein.
@@ -129,7 +131,7 @@ Display_PleaseWait=Wird geladen ...
 Display_PleaseWaitNewUser=Das neue Konto wird konfiguriert. Dieser Vorgang kann einige Minuten dauern. Bitte gedulden Sie sich.
 Display_PleaseWaitPassword=Das Passwort wird ge\u00e4ndert. Dieser Vorgang kann einige Minuten dauern. Bitte gedulden Sie sich.
 Display_Random=Zufall
-Display_RecoverVerificationChoice=W\u00e4hlen Sie eine der folgenden Methoden zur \u00dcberpr\u00fcfung Ihrer Identit\u00e4t aus.
+Display_RecoverVerificationChoice=W\u00e4hlen Sie eine der folgenden Methoden zur \u00dcberpr\u00fcfung Ihrer Identit\u00e4t aus. Hinweis\: Wenn der Administrator mehrere \u00dcberpr\u00fcfungsarten anfordert, werden Sie wieder auf diese Seite geleitet, bis alle \u00dcberpr\u00fcfungskriterien erf\u00fcllt sind.
 Display_RecoverTokenSendChoices=Zur \u00dcberpr\u00fcfung Ihrer Identit\u00e4t wird Ihnen ein Sicherheitscode gesendet. W\u00e4hlen Sie aus, mit welcher Methode Sie den Sicherheitscode empfangen m\u00f6chten.
 Display_RecoverTokenSendChoiceEmail=Code an die registrierte Email-Adresse senden.
 Display_RecoverTokenSendChoiceSMS=Code in einer Textnachricht (SMS) an das Mobiltelefon senden.
@@ -164,9 +166,9 @@ Display_SetupOtp_iPhone_Steps=<b>Tippen Sie auf dem iPhone auf das App Store-Sym
 Display_SetupOtp_Other_Title=Sonstige
 Display_SetupOtp_Other_Steps=<b>Suchen Sie eine kompatible Zwei-Faktoren-App.</b><ul><li>Suchen Sie im App-Store Ihres Ger\u00e4ts nach <b>Google Authenticator</b>.<br/>F\u00fcr viele Ger\u00e4te sind kompatible Apps verf\u00fcgbar.</li><li>Suchen Sie nach einer App, die "<b>TOTP-Sicherheitstoken"</b> oder "RFC6238" unterst\u00fctzt</li><li> Laden Sie die Anwendung herunter und installieren Sie sie.</li></ul><b>\u00d6ffnen und konfigurieren Sie dann die App.</b><ol><li>Geben Sie die Daten unten ein oder scannen Sie den Code wie von der App angewiesen.</li><li>Klicken Sie nach der Konfiguration der App auf die Schaltfl\u00e4che 'Weiter'.</li></ol>
 Display_TokenDestination=Token-Ziel
-Display_UsernameHeader=@User:ID@
-Display_UsernameFooter=@User:ID@
-Display_WarnExistingOtpSecretTime=Sie haben das Ger\u00e4t bereits am <span class="timestamp">%1%</span> registriert. Um das aktuelle Ger\u00e4t zu testen, geben Sie unten den generierten Code ein. Wenn Sie fortfahren, k\u00f6nnen Sie das aktuelle Ger\u00e4t neu konfigurieren.
+Display_UsernameHeader=@User\:ID@
+Display_UsernameFooter=@User\:ID@
+Display_WarnExistingOtpSecretTime=Sie haben das Ger\u00e4t bereits am <span class\="timestamp">%1%</span> registriert. Um das aktuelle Ger\u00e4t zu testen, geben Sie unten den generierten Code ein. Wenn Sie fortfahren, k\u00f6nnen Sie das aktuelle Ger\u00e4t neu konfigurieren.
 Display_WarnExistingOtpSecret=Sie haben das Ger\u00e4t bereits registriert. Um Ihr aktuelles Ger\u00e4t zu testen, geben Sie unten den generierten Code ein. Wenn Sie fortfahren, k\u00f6nnen Sie das aktuelle Ger\u00e4t neu konfigurieren.
 Display_WarnExistingResponseTime=Sie haben die Sicherheitsantworten bereits am <span class\="timestamp">%1%</span> eingerichtet. Wenn Sie fortfahren, k\u00f6nnen Sie die Fragen neu beantworten.
 Display_WarnExistingResponse=Sie haben die Sicherheitsantworten bereits eingerichtet. Wenn Sie fortfahren, k\u00f6nnen Sie die Fragen neu beantworten.
@@ -237,6 +239,7 @@ Field_VerificationMethodChallengeResponses=Sicherheitsfragen und -antworten
 Field_VerificationMethodAttributes=Pers\u00f6nliche Daten
 Field_VerificationMethodRemoteResponses=Externe Antworten
 Field_VerificationMethodNAAF=Advanced Authentication
+Field_VerificationMethodOAuth=Externe Authentifizierung
 Field_Placeholder_Answer=Antwort
 Long_Title_ActivateUser=Vorkonfiguriertes Konto aktivieren und ein neues Passwort erstellen.
 Long_Title_Admin=Verwaltungsfunktionen
@@ -256,6 +259,7 @@ Long_Title_Shortcuts=Personalisierte Tastenkombinationen.
 Long_Title_UpdateProfile=Aktualisieren Sie die Benutzerprofildaten.
 Long_Title_UserEventHistory=Passwortereignisverlauf. Zeigen Sie an, wann Sie Ihr Passwort in der Vergangenheit ge\u00e4ndert haben.
 Long_Title_UserInformation=Informationen \u00fcber das Passwort und die Passwortrichtlinien.
+Long_Title_DeleteAccount=Konto und Profil aus diesem Dienst entfernen
 Long_Title_VerificationSend=Der Benutzer kann erst ausgew\u00e4hlt werden, nachdem seine Identit\u00e4t \u00fcberpr\u00fcft wurde. W\u00e4hlen Sie eine \u00dcberpr\u00fcfungsmethode aus.
 Title_AnsweredQuestions=Beantwortete Fragen
 Title_ActivateUser=Konto aktivieren
@@ -273,6 +277,7 @@ Title_Helpdesk=Helpdesk
 Title_LocaleSelect=Auswahl des Gebietsschemas
 Title_Login=Melden Sie sich an
 Title_Logout=Abmelden
+Title_LogoutPublic=Zeit\u00fcberschreitung nach Inaktivit\u00e4t
 Title_MainPage=Hauptmen\u00fc
 Title_NewUser=Registrierung eines neuen Benutzers
 Title_OrgChart=Organigramm
@@ -299,10 +304,15 @@ Title_TitleBarAuthenticated=@User\:ID@ Passwortselbstbedienung
 Title_TitleBar=Passwortselbstbedienung
 Title_UpdateProfile=Profil aktualisieren
 Title_UpdateProfileConfirm=Profildaten best\u00e4tigen
+Title_UserData=Meine Daten
 Title_UserEventHistory=Passwortverlauf
 Title_UserInformation=Mein Konto
 Title_ValidateCode=Code \u00fcberpr\u00fcfen
 Title_VerificationSend=\u00dcberpr\u00fcfungsmethode ausw\u00e4hlen
+Title_DeleteAccount=Mein Konto l\u00f6schen
+Title_Management=Verwaltung
+Title_DirectReports=Direkt Unterstellte
+Title_Organization=Organisation
 Tooltip_PasswordStrength=Die Anzeige der Passwortst\u00e4rke gibt an, wie einfach das Passwort zu erraten ist. Befolgen Sie diese Tipps, um die Passwortst\u00e4rke zu verbessern\:<ul><li>Verwenden Sie ein l\u00e4ngeres Passwort.</li><li>Wiederholen Sie die Buchstaben und Zahlen nicht.</li><li>Verwenden Sie eine Kombination aus Gro\u00df- und Kleinbuchstaben.</li><li>F\u00fcgen Sie weitere Zahlen hinzu.</li><li>F\u00fcgen Sie weitere Symbolzeichen hinzu.</li></ul>
 Confirm_DeleteUser=Sind Sie sicher, dass Sie fortfahren m\u00f6chten? Wenn Sie fortfahren, wird der ausgew\u00e4hlte Benutzer dauerhaft gel\u00f6scht. Dies kann nicht r\u00fcckg\u00e4ngig gemacht werden.
 Confirm=Weiter?
