--- a/src/main/resources/password/pwm/i18n/Display_fr.properties
+++ b/src/main/resources/password/pwm/i18n/Display_fr.properties
@@ -1,4 +1,4 @@
-#Mon, 04 Apr 2016 05:53:55 -0400
+#Tue, 08 Nov 2016 18:41:50 -0500
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -81,6 +81,7 @@ Display_CommunicationError=Communication avec le serveur impossible. Continuez l
 Display_ConfirmResponses=Veillez \u00e0 ce que vos questions et r\u00e9ponses soient correctes. V\u00e9rifiez l'orthographe et la ponctuation. Si vous oubliez votre mot de passe, vous pourrez acc\u00e9der \u00e0 votre compte en r\u00e9pondant \u00e0 ces questions de s\u00e9curit\u00e9.
 Display_Day=jour
 Display_Days=jours
+Display_DeleteUserConfirm=Voulez-vous vraiment supprimer votre compte ? Cette op\u00e9ration est irr\u00e9versible.
 Display_ErrorBody=Une erreur s'est produite. Fermez votre navigateur et r\u00e9essayez. Si elle se reproduit, contactez votre service d'assistance.
 Display_ErrorReference=r\u00e9f\u00e9rence de l'erreur %1%
 Display_ExpirationDate=Date d'expiration du compte (maximum %1% jours)
@@ -94,13 +95,14 @@ Display_HelpdeskOtpValidation=Demandez \u00e0 l'utilisateur de charger son appli
 Display_Hour=heure
 Display_Hours=heures
 Display_IdleTimeout=Timeout d'inactivit\u00e9\:
-Display_IdleWarningMessage=Timeout imminent de la session du navigateur. Cliquez n'importe o\u00f9 dans cette page pour qu'elle reste active.
+Display_IdleWarningMessage=Votre session est sur le point d'expirer. Cliquez n'importe o\u00f9 sur cette page pour qu'elle reste active.
 Display_IdleWarningTitle=Timeout d'inactivit\u00e9
 Display_JavascriptRequired=Javascript est requis pour afficher cette page.
 Display_LeaveDirtyPasswordPage=Si vous quittez cette page, votre mot de passe ne sera pas \u00e9dit\u00e9.
 Display_Login=
 Display_LoginPasswordOnly=Entrez votre mot de passe ci-dessous. Votre mot de passe actuel est requis pour acc\u00e9der \u00e0 cette application.
-Display_Logout=<b>Vous \u00eates d\u00e9sormais d\u00e9connect\u00e9.</b><p/>Fermez toutes les fen\u00eatres de navigateur Internet avant de tenter de vous reconnecter.
+Display_Logout=Vous \u00eates \u00e0 pr\u00e9sent d\u00e9connect\u00e9.
+Display_LogoutPublic=Votre session a expir\u00e9 pour cause d'inactivit\u00e9.
 Display_Minute=minute
 Display_Minutes=minutes
 Display_NAAF_PASSWORD=Veuillez fournir votre mot de passe d'authentification NAAF.
@@ -129,7 +131,7 @@ Display_PleaseWait=Chargement...
 Display_PleaseWaitNewUser=Votre nouveau compte est en cours de configuration. Ce processus peut prendre quelques minutes, veuillez patienter.
 Display_PleaseWaitPassword=Votre mot de passe est en cours d'\u00e9dition. Ce processus peut prendre quelques minutes, veuillez patienter.
 Display_Random=Al\u00e9atoire
-Display_RecoverVerificationChoice=S\u00e9lectionnez l'une des m\u00e9thodes suivantes pour confirmer votre identit\u00e9.
+Display_RecoverVerificationChoice=S\u00e9lectionnez l'une des m\u00e9thodes suivantes pour v\u00e9rifier votre identit\u00e9. Remarque \: si votre administrateur exige plusieurs formes de v\u00e9rification, vous serez redirig\u00e9 vers cette page jusqu'\u00e0 ce que tous les crit\u00e8res de v\u00e9rification soient remplis.
 Display_RecoverTokenSendChoices=Un code de s\u00e9curit\u00e9 vous sera envoy\u00e9 pour v\u00e9rifier votre identit\u00e9. Choisissez la m\u00e9thode qui vous convient le mieux pour recevoir votre code de s\u00e9curit\u00e9.
 Display_RecoverTokenSendChoiceEmail=Envoyer le code \u00e0 votre adresse \u00e9lectronique enregistr\u00e9e.
 Display_RecoverTokenSendChoiceSMS=Envoyer le code par message texte (SMS) sur votre t\u00e9l\u00e9phone mobile.
@@ -152,7 +154,7 @@ Display_SetRandomPasswordPrompt=Voulez-vous d\u00e9finir un nouveau mot de passe
 Display_SearchResultsNone=Aucun r\u00e9sultat.
 Display_Second=seconde
 Display_Seconds=secondes
-Display_SetupHelpdeskResponses=<p>L'administrateur exige que vous indiquiez les r\u00e9ponses suivantes. Elles permettent de v\u00e9rifier votre identit\u00e9 si vous devez vous adresser au service d'assistance pour obtenir de l'aide.</p>
+Display_SetupHelpdeskResponses=<p>Votre administrateur exige que vous indiquiez les r\u00e9ponses suivantes. Elles permettent de v\u00e9rifier votre identit\u00e9 si vous devez vous adresser au service d'assistance pour obtenir de l'aide.</p>
 Display_SetupRandomResponses=
 Display_SetupRequiredResponses=
 Display_SetupResponses=<p>Si vous avez oubli\u00e9 votre mot de passe, vous pourrez acc\u00e9der \u00e0 votre compte en r\u00e9pondant \u00e0 vos questions de s\u00e9curit\u00e9.</p><p>Choisissez les questions et r\u00e9ponses qui serviront \u00e0 v\u00e9rifier votre identit\u00e9 en cas d'oubli de votre mot de passe. \u00c9tant donn\u00e9 que les r\u00e9ponses \u00e0 ces questions permettront d'acc\u00e9der \u00e0 votre compte, veillez \u00e0 fournir des r\u00e9ponses difficiles \u00e0 deviner ou \u00e0 d\u00e9couvrir pour d'autres utilisateurs.</p>
@@ -164,9 +166,9 @@ Display_SetupOtp_iPhone_Steps=<b>Sur votre iPhone, appuyez sur l'ic\u00f4ne App 
 Display_SetupOtp_Other_Title=Autre
 Display_SetupOtp_Other_Steps=<b>Recherchez une application \u00e0 deux facteurs compatible.</b><ul><li>Essayez de trouver <b>Google Authenticator</b> dans l'App Store de votre appareil.<br/>De nombreux p\u00e9riph\u00e9riques ont des applications compatibles.</li><li>Essayez de trouver une application qui prend en charge les "<b>jetons de s\u00e9curit\u00e9 TOTP</b>" ou "RFC6238".</li><li>T\u00e9l\u00e9chargez et installez l'application.</li></ul><b>Ensuite, ouvrez et configurez l'application.</b><ol><li>Entrez les donn\u00e9es ci-dessous ou scannez le code en suivant les instructions de l'application.</li><li>Une fois l'application configur\u00e9e, cliquez sur le bouton Continuer.</li></ol>
 Display_TokenDestination=Destination du jeton
-Display_UsernameHeader=@User:ID@
-Display_UsernameFooter=@User:ID@
-Display_WarnExistingOtpSecretTime=Vous avez d\u00e9j\u00e0 inscrit votre p\u00e9riph\u00e9rique le <span class="timestamp">%1%</span>. Vous pouvez tester votre p\u00e9riph\u00e9rique actuel en introduisant le code g\u00e9n\u00e9r\u00e9 ci-dessous. Si vous continuez, vous pouvez reconfigurer votre p\u00e9riph\u00e9rique actuel.
+Display_UsernameHeader=@User\:ID@
+Display_UsernameFooter=@User\:ID@
+Display_WarnExistingOtpSecretTime=Vous avez d\u00e9j\u00e0 inscrit votre p\u00e9riph\u00e9rique le <span class\="timestamp">%1%</span>. Vous pouvez tester votre p\u00e9riph\u00e9rique actuel en introduisant le code g\u00e9n\u00e9r\u00e9 ci-dessous. Si vous continuez, vous pouvez reconfigurer votre p\u00e9riph\u00e9rique actuel.
 Display_WarnExistingOtpSecret=Vous avez d\u00e9j\u00e0 inscrit votre p\u00e9riph\u00e9rique. Vous pouvez tester votre appareil actuel en tapant le code g\u00e9n\u00e9r\u00e9 ci-dessous. Si vous continuez, vous pouvez reconfigurer votre p\u00e9riph\u00e9rique actuel.
 Display_WarnExistingResponseTime=Vous avez d\u00e9j\u00e0 configur\u00e9 vos questions/r\u00e9ponses de v\u00e9rification d'identit\u00e9 le  <span class\="timestamp">%1%</span>. Si vous continuez, vous pouvez de nouveau r\u00e9pondre \u00e0 vos questions.
 Display_WarnExistingResponse=Vous avez d\u00e9j\u00e0 configur\u00e9 vos questions/r\u00e9ponses de v\u00e9rification d'identit\u00e9. Si vous continuez, vous pouvez de nouveau r\u00e9pondre \u00e0 vos questions.
@@ -237,6 +239,7 @@ Field_VerificationMethodChallengeResponses=Questions et r\u00e9ponses secr\u00e8
 Field_VerificationMethodAttributes=Donn\u00e9es personnelles
 Field_VerificationMethodRemoteResponses=R\u00e9ponses externes
 Field_VerificationMethodNAAF=Advanced Authentication
+Field_VerificationMethodOAuth=Authentification externe
 Field_Placeholder_Answer=R\u00e9ponse
 Long_Title_ActivateUser=Activez un compte pr\u00e9configur\u00e9 et \u00e9tablissez un nouveau mot de passe.
 Long_Title_Admin=Fonctions administratives
@@ -256,6 +259,7 @@ Long_Title_Shortcuts=Raccourcis personnalis\u00e9s.
 Long_Title_UpdateProfile=Mettez \u00e0 jour les donn\u00e9es de votre profil utilisateur.
 Long_Title_UserEventHistory=Historique des \u00e9v\u00e9nements concernant les mots de passe. Consultez la date \u00e0 laquelle vous avez chang\u00e9 votre mot de passe.
 Long_Title_UserInformation=Informations sur votre mot de passe et sur les strat\u00e9gies de mot de passe.
+Long_Title_DeleteAccount=Supprimer votre compte et votre profil de ce service
 Long_Title_VerificationSend=Avant de pouvoir s\u00e9lectionner cet utilisateur, vous devez v\u00e9rifier son identit\u00e9. S\u00e9lectionnez une m\u00e9thode de v\u00e9rification.
 Title_AnsweredQuestions=Questions auxquelles vous avez r\u00e9pondu
 Title_ActivateUser=Activer le compte
@@ -273,6 +277,7 @@ Title_Helpdesk=Service d'assistance
 Title_LocaleSelect=S\u00e9lection des param\u00e8tres r\u00e9gionaux
 Title_Login=Connexion
 Title_Logout=D\u00e9connexion
+Title_LogoutPublic=Timeout en cas d'inactivit\u00e9
 Title_MainPage=Menu principal
 Title_NewUser=Enregistrement de nouvel utilisateur
 Title_OrgChart=Organigramme
@@ -299,10 +304,15 @@ Title_TitleBarAuthenticated=@User\:ID@ Self-service de mot de passe
 Title_TitleBar=Self-service de mot de passe
 Title_UpdateProfile=Mettre \u00e0 jour le profil
 Title_UpdateProfileConfirm=Confirmer les donn\u00e9es du profil
+Title_UserData=Mes donn\u00e9es
 Title_UserEventHistory=Historique des mots de passe
 Title_UserInformation=Mon compte
 Title_ValidateCode=Code de validation
 Title_VerificationSend=S\u00e9lectionner une m\u00e9thode de v\u00e9rification
+Title_DeleteAccount=Supprimer mon compte
+Title_Management=Gestion
+Title_DirectReports=Subordonn\u00e9s directs
+Title_Organization=Organisation
 Tooltip_PasswordStrength=L'\u00e9valuation de la force du mot de passe indique la facilit\u00e9 avec laquelle votre mot de passe peut \u00eatre devin\u00e9. Essayez les astuces suivantes pour renforcer votre mot de passe\:<ul><li>Rallongez votre mot de passe</li><li>Ne r\u00e9p\u00e9tez pas les m\u00eames lettres ou chiffres.</li><li>Combinez des majuscules et des minuscules.</li><li>Ajoutez plus de chiffres.</li><li>Ajoutez plus de symboles.</li></ul>
 Confirm_DeleteUser=Voulez-vous vraiment continuer ?  Si vous poursuivez, l'utilisateur s\u00e9lectionn\u00e9 sera d\u00e9finitivement supprim\u00e9. Cette op\u00e9ration ne peut pas \u00eatre annul\u00e9e.
 Confirm=Voulez-vous vraiment continuer ?
