--- a/src/main/resources/password/pwm/i18n/Display_it.properties
+++ b/src/main/resources/password/pwm/i18n/Display_it.properties
@@ -1,4 +1,4 @@
-#Mon, 04 Apr 2016 05:53:55 -0400
+#Tue, 08 Nov 2016 18:41:50 -0500
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -81,6 +81,7 @@ Display_CommunicationError=Impossibile comunicare con il server. Quando si \u00e
 Display_ConfirmResponses=Verificare che risposte e domande siano corrette. Controllare ortografia e punteggiatura. Se si dimentica la password, sar\u00e0 possibile accedere al proprio account rispondendo a queste domande di sicurezza.
 Display_Day=giorno
 Display_Days=giorni
+Display_DeleteUserConfirm=Cancellare l'account?  L'operazione non pu\u00f2 essere annullata.
 Display_ErrorBody=Si \u00e8 verificato un errore. Chiudere il browser e riprovare pi\u00f9 tardi. Se l'errore si ripete pi\u00f9 volte, contattare l'help desk.
 Display_ErrorReference=riferimento errore %1%
 Display_ExpirationDate=Data di scadenza account (%1% giorni massimo)
@@ -94,13 +95,14 @@ Display_HelpdeskOtpValidation=Fornisce istruzioni all'utente circa l'avvio dell'
 Display_Hour=ora
 Display_Hours=ore
 Display_IdleTimeout=Timeout inattivit\u00e0\:
-Display_IdleWarningMessage=La sessione del browser sta per scadere. Per riprenderla, fare clic in un punto qualsiasi della pagina.
+Display_IdleWarningMessage=La sessione sta per scadere. Per riprenderla, fare clic in un punto qualsiasi della pagina.
 Display_IdleWarningTitle=Timeout inattivit\u00e0
 Display_JavascriptRequired=Per visualizzare la pagina \u00e8 necessario Javascript.
 Display_LeaveDirtyPasswordPage=Se si abbandona la pagina, la password non verr\u00e0 modificata.
 Display_Login=
 Display_LoginPasswordOnly=Immettere la password qui di seguito. La password attuale \u00e8 necessaria per accedere all'applicazione.
-Display_Logout=<b>Disconnessione eseguita.</b><p/>Prima di tentare nuovamente l'accesso, chiudere tutte le finestre del browser.
+Display_Logout=Disconnessione eseguita.
+Display_LogoutPublic=La sessione \u00e8 scaduta perch\u00e9 non \u00e8 stata eseguita alcuna attivit\u00e0.
 Display_Minute=minuto
 Display_Minutes=minuti
 Display_NAAF_PASSWORD=Specificare la password di autenticazione NAAF.
@@ -129,7 +131,7 @@ Display_PleaseWait=Caricamento in corso\u2026
 Display_PleaseWaitNewUser=\u00c8 in corso la configurazione del nuovo account. La procedura potrebbe richiedere alcuni minuti. Si prega di attendere.
 Display_PleaseWaitPassword=\u00c8 in corso la modifica della password. La procedura potrebbe richiedere alcuni minuti. Si prega di attendere.
 Display_Random=Casuale
-Display_RecoverVerificationChoice=Per verificare l'identit\u00e0, selezionare uno dei metodi seguenti.
+Display_RecoverVerificationChoice=Per verificare la propria identit\u00e0, selezionare uno dei metodi seguenti. Nota\: se l'amministratore richiede pi\u00f9 forme di verifica, l'utente verr\u00e0 reindirizzato a questa pagina fino a quando non soddisfa tutti i criteri di verifica.
 Display_RecoverTokenSendChoices=All'utente verr\u00e0 inviato un codice di sicurezza per verificarne l'identit\u00e0. Scegliere il metodo desiderato per la ricezione del codice di sicurezza.
 Display_RecoverTokenSendChoiceEmail=Inviare il codice all'indirizzo e-mail dell'utente registrato.
 Display_RecoverTokenSendChoiceSMS=Inviare il codice al numero di cellulare dell'utente utilizzando un SMS.
@@ -164,9 +166,9 @@ Display_SetupOtp_iPhone_Steps=<b>Toccare l'icona di App Store sull'iPhone.</b><o
 Display_SetupOtp_Other_Title=Altri
 Display_SetupOtp_Other_Steps=<b>Cercare un'app compatibile a due fattori.</b><ul><li>Cercare <b>Google Authenticator</b> nell'app store del proprio dispositivo.<br/>Sono disponibili app compatibili per numerosi dispositivi.</li><li>Provare a cercare un'app che supporti i "<b>token di sicurezza TOTP</b>" o "RFC6238"</li><li>Effettuare il download e installare l'applicazione.</li></ul><b>Al termine dell'installazione, aprire e configurare l'app.</b><ol><li>Immettere i dati riportati di seguito o effettuare la scansione del codice a barre seguendo le istruzioni dell'app.</li><li>Dopo aver configurato l'app, fare clic sul pulsante Continua.</li></ol>
 Display_TokenDestination=Destinazione token
-Display_UsernameHeader=@User:ID@
-Display_UsernameFooter=@User:ID@
-Display_WarnExistingOtpSecretTime=Il dispositivo \u00e8 gi\u00e0 stato registrato il <span class="timestamp">%1%</span>. Per eseguire una prova del dispositivo attuale, digitare di seguito il codice generato. Continuando \u00e8 possibile riconfigurare il dispositivo attuale.
+Display_UsernameHeader=@User\:ID@
+Display_UsernameFooter=@User\:ID@
+Display_WarnExistingOtpSecretTime=Il dispositivo \u00e8 gi\u00e0 stato registrato il <span class\="timestamp">%1%</span>. Per eseguire una prova del dispositivo attuale, digitare di seguito il codice generato. Continuando \u00e8 possibile riconfigurare il dispositivo attuale.
 Display_WarnExistingOtpSecret=Il dispositivo \u00e8 gi\u00e0 stato registrato. Per eseguire una prova del dispositivo attuale, digitare di seguito il codice generato. Continuando \u00e8 possibile riconfigurare il dispositivo attuale.
 Display_WarnExistingResponseTime=Le domande/risposte di autenticazione sono gi\u00e0 state impostate il <span class\="timestamp">%1%</span>. Continuando \u00e8 possibile rispondere nuovamente alle domande.
 Display_WarnExistingResponse=Le domande/risposte di autenticazione sono gi\u00e0 state impostate. Continuando \u00e8 possibile rispondere nuovamente alle domande.
@@ -237,6 +239,7 @@ Field_VerificationMethodChallengeResponses=Domande e risposte segrete
 Field_VerificationMethodAttributes=Dati personali
 Field_VerificationMethodRemoteResponses=Risposte esterne
 Field_VerificationMethodNAAF=Advanced Authentication
+Field_VerificationMethodOAuth=Autenticazione esterna
 Field_Placeholder_Answer=Risposta
 Long_Title_ActivateUser=Attivare un account pre-configurato e impostare una nuova password.
 Long_Title_Admin=Funzioni amministrative
@@ -256,6 +259,7 @@ Long_Title_Shortcuts=Collegamenti personalizzati.
 Long_Title_UpdateProfile=Aggiornare i dati del profilo utente.
 Long_Title_UserEventHistory=Cronologia eventi della password. Consente di verificare quando \u00e8 stata modificata la password in passato.
 Long_Title_UserInformation=Informazioni riguardanti la password e le relative policy.
+Long_Title_DeleteAccount=Rimuovere l'account e il profilo dal servizio
 Long_Title_VerificationSend=Prima di poter selezionare l'utente, \u00e8 necessario verificarne l'identit\u00e0. Selezionare un metodo di verifica.
 Title_AnsweredQuestions=Domande con risposte
 Title_ActivateUser=Attiva account
@@ -273,6 +277,7 @@ Title_Helpdesk=Help desk
 Title_LocaleSelect=Selezione impostazioni internazionali
 Title_Login=Eseguire l'accesso
 Title_Logout=Disconnetti
+Title_LogoutPublic=Timeout inattivit\u00e0
 Title_MainPage=Menu principale
 Title_NewUser=Registrazione nuovo utente
 Title_OrgChart=Organigramma
@@ -299,10 +304,15 @@ Title_TitleBarAuthenticated=@User\:ID@  Self-service password
 Title_TitleBar=Self-service password
 Title_UpdateProfile=Aggiorna profilo
 Title_UpdateProfileConfirm=Conferma dati profilo
+Title_UserData=Dati personali
 Title_UserEventHistory=Cronologia password
 Title_UserInformation=Account personale
 Title_ValidateCode=Convalida codice
 Title_VerificationSend=Selezionare un metodo di verifica
+Title_DeleteAccount=Cancella account personale
+Title_Management=Gestione
+Title_DirectReports=Rapporti diretti
+Title_Organization=Organizzazione
 Tooltip_PasswordStrength=L'indicatore di complessit\u00e0 indica se la password \u00e8 facile da indovinare o meno. Per aumentare il grado di complessit\u00e0 della password, seguire i suggerimenti riportati di seguito\:<ul><li>Creare una password pi\u00f9 lunga</li><li>Non ripetere lettere o numeri</li><li>Usare lettere maiuscole e minuscole</li><li>Aggiungere pi\u00f9 numeri</li><li>Aggiungere pi\u00f9 simboli</li></ul>
 Confirm_DeleteUser=Continuare? Se si continua, l'utente selezionato verr\u00e0 eliminato definitivamente. L'operazione \u00e8 irreversibile.
 Confirm=Continuare?
