--- a/src/main/resources/password/pwm/i18n/Display_ja.properties
+++ b/src/main/resources/password/pwm/i18n/Display_ja.properties
@@ -1,4 +1,4 @@
-#Mon, 04 Apr 2016 05:53:55 -0400
+#Tue, 08 Nov 2016 18:41:50 -0500
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -81,6 +81,7 @@ Display_CommunicationError=\u30b5\u30fc\u30d0\u3068\u901a\u4fe1\u3067\u304d\u307
 Display_ConfirmResponses=\u56de\u7b54\u3068\u8cea\u554f\u304c\u6b63\u3057\u3044\u3053\u3068\u3092\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u7db4\u308a\u3084\u53e5\u8aad\u70b9\u3092\u30c1\u30a7\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u5fd8\u308c\u305f\u5834\u5408\u306f\u3001\u3053\u308c\u3089\u306e\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u8cea\u554f\u306e\u56de\u7b54\u3092\u5165\u529b\u3059\u308b\u3053\u3068\u306b\u3088\u3063\u3066\u3001\u30a2\u30ab\u30a6\u30f3\u30c8\u306b\u30a2\u30af\u30bb\u30b9\u3067\u304d\u307e\u3059\u3002
 Display_Day=\u65e5
 Display_Days=\u65e5
+Display_DeleteUserConfirm=\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u524a\u9664\u3057\u307e\u3059\u304b?\u3053\u308c\u306f\u3001\u5143\u306b\u623b\u3059\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3002
 Display_ErrorBody=\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002\u30d6\u30e9\u30a6\u30b6\u3092\u9589\u3058\u3066\u3001\u5f8c\u3067\u3082\u3046\u4e00\u5ea6\u3084\u308a\u76f4\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u3053\u306e\u30a8\u30e9\u30fc\u304c\u7e70\u308a\u8fd4\u3057\u767a\u751f\u3059\u308b\u5834\u5408\u306f\u3001\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u304a\u554f\u3044\u5408\u308f\u305b\u304f\u3060\u3055\u3044\u3002
 Display_ErrorReference=\u30a8\u30e9\u30fc\u53c2\u7167 %1%
 Display_ExpirationDate=\u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u6709\u52b9\u671f\u9650(\u6700\u5927 %1% \u65e5)
@@ -94,13 +95,14 @@ Display_HelpdeskOtpValidation=\u30e2\u30d0\u30a4\u30eb\u8a8d\u8a3c\u30a2\u30d7\u
 Display_Hour=\u6642\u9593
 Display_Hours=\u6642\u9593
 Display_IdleTimeout=\u30a2\u30a4\u30c9\u30eb\u30bf\u30a4\u30e0\u30a2\u30a6\u30c8\:
-Display_IdleWarningMessage=\u30d6\u30e9\u30a6\u30b6\u30bb\u30c3\u30b7\u30e7\u30f3\u304c\u30bf\u30a4\u30e0\u30a2\u30a6\u30c8\u3057\u3088\u3046\u3068\u3057\u3066\u3044\u307e\u3059\u3002\u518d\u958b\u3059\u308b\u306b\u306f\u3053\u306e\u30da\u30fc\u30b8\u4e0a\u306e\u4efb\u610f\u306e\u5834\u6240\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+Display_IdleWarningMessage=\u30bb\u30c3\u30b7\u30e7\u30f3\u304c\u30bf\u30a4\u30e0\u30a2\u30a6\u30c8\u3057\u3088\u3046\u3068\u3057\u3066\u3044\u307e\u3059\u3002\u518d\u958b\u3059\u308b\u306b\u306f\u3053\u306e\u30da\u30fc\u30b8\u4e0a\u306e\u4efb\u610f\u306e\u5834\u6240\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Display_IdleWarningTitle=\u30a2\u30a4\u30c9\u30eb\u30bf\u30a4\u30e0\u30a2\u30a6\u30c8
 Display_JavascriptRequired=\u3053\u306e\u30da\u30fc\u30b8\u3092\u8868\u793a\u3059\u308b\u306b\u306fJavascript\u304c\u5fc5\u8981\u3067\u3059\u3002
 Display_LeaveDirtyPasswordPage=\u3053\u306e\u30da\u30fc\u30b8\u304b\u3089\u79fb\u52d5\u3057\u3066\u3082\u3001\u30d1\u30b9\u30ef\u30fc\u30c9\u306f\u5909\u66f4\u3055\u308c\u307e\u305b\u3093\u3002
 Display_Login=
 Display_LoginPasswordOnly=\u4e0b\u306b\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u3053\u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306b\u30a2\u30af\u30bb\u30b9\u3059\u308b\u306b\u306f\u3001\u73fe\u5728\u306e\u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u5fc5\u8981\u3067\u3059\u3002
-Display_Logout=<b>\u30ed\u30b0\u30a2\u30a6\u30c8\u3055\u308c\u307e\u3057\u305f\u3002</b><p/>\u3059\u3079\u3066\u306e\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8\u30d6\u30e9\u30a6\u30b6\u3092\u9589\u3058\u3066\u304b\u3089\u3001\u30ed\u30b0\u30a4\u30f3\u3092\u3084\u308a\u76f4\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+Display_Logout=\u30b5\u30a4\u30f3\u30a2\u30a6\u30c8\u3057\u3066\u3044\u307e\u3059\u3002
+Display_LogoutPublic=\u64cd\u4f5c\u304c\u884c\u308f\u308c\u306a\u304b\u3063\u305f\u305f\u3081\u3001\u30bb\u30c3\u30b7\u30e7\u30f3\u304c\u30bf\u30a4\u30e0\u30a2\u30a6\u30c8\u306b\u306a\u308a\u307e\u3057\u305f\u3002
 Display_Minute=\u5206
 Display_Minutes=\u5206
 Display_NAAF_PASSWORD=NAAF\u8a8d\u8a3c\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
@@ -129,7 +131,7 @@ Display_PleaseWait=\u30ed\u30fc\u30c9\u4e2d...
 Display_PleaseWaitNewUser=\u65b0\u3057\u3044\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u8a2d\u5b9a\u3057\u3066\u3044\u307e\u3059\u3002\u3053\u306e\u30d7\u30ed\u30bb\u30b9\u306b\u306f\u6570\u5206\u304b\u304b\u308b\u5834\u5408\u304c\u3042\u308a\u307e\u3059\u3002\u3057\u3070\u3089\u304f\u304a\u5f85\u3061\u304f\u3060\u3055\u3044\u3002
 Display_PleaseWaitPassword=\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u5909\u66f4\u3057\u3066\u3044\u307e\u3059\u3002\u3053\u306e\u30d7\u30ed\u30bb\u30b9\u306b\u306f\u6570\u5206\u304b\u304b\u308b\u5834\u5408\u304c\u3042\u308a\u307e\u3059\u3002\u3057\u3070\u3089\u304f\u304a\u5f85\u3061\u304f\u3060\u3055\u3044\u3002
 Display_Random=\u30e9\u30f3\u30c0\u30e0
-Display_RecoverVerificationChoice=\u672c\u4eba\u78ba\u8a8d\u306e\u65b9\u6cd5\u3092\u3001\u6b21\u306e\u4e2d\u304b\u30891\u3064\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+Display_RecoverVerificationChoice=\u6b21\u306e\u672c\u4eba\u78ba\u8a8d\u306e\u65b9\u6cd5\u304b\u30891\u3064\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u30e1\u30e2\: \u7ba1\u7406\u8005\u306b\u3088\u308a\u8907\u6570\u306e\u65b9\u6cd5\u306b\u3088\u308b\u78ba\u8a8d\u304c\u6c42\u3081\u3089\u308c\u3066\u3044\u308b\u5834\u5408\u3001\u78ba\u8a8d\u306e\u57fa\u6e96\u304c\u3059\u3079\u3066\u6e80\u305f\u3055\u308c\u308b\u307e\u3067\u3053\u306e\u30da\u30fc\u30b8\u306b\u30ea\u30c0\u30a4\u30ec\u30af\u30c8\u3055\u308c\u307e\u3059\u3002
 Display_RecoverTokenSendChoices=\u672c\u4eba\u78ba\u8a8d\u306e\u305f\u3081\u306b\u3001\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u30b3\u30fc\u30c9\u3092\u9001\u4fe1\u3057\u307e\u3059\u3002\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u30b3\u30fc\u30c9\u3092\u53d7\u3051\u53d6\u308b\u65b9\u6cd5\u3092\u3001\u6b21\u306e\u4e2d\u304b\u30891\u3064\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Display_RecoverTokenSendChoiceEmail=\u767b\u9332\u3055\u308c\u3066\u3044\u308b\u96fb\u5b50\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u306b\u30b3\u30fc\u30c9\u3092\u9001\u4fe1\u3057\u307e\u3059\u3002
 Display_RecoverTokenSendChoiceSMS=\u30c6\u30ad\u30b9\u30c8\u30e1\u30c3\u30bb\u30fc\u30b8(SMS)\u3067\u643a\u5e2f\u96fb\u8a71\u306b\u30b3\u30fc\u30c9\u3092\u9001\u4fe1\u3057\u307e\u3059\u3002
@@ -164,9 +166,9 @@ Display_SetupOtp_iPhone_Steps=<b>\u3054\u4f7f\u7528\u306eiPhone\u3067\u3001App S
 Display_SetupOtp_Other_Title=\u305d\u306e\u4ed6
 Display_SetupOtp_Other_Steps=<b>\u4e92\u63db\u6027\u306e\u3042\u308b2\u6bb5\u968e\u8a8d\u8a3c\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u898b\u3064\u3051\u307e\u3059\u3002</b><ul><li>\u3054\u4f7f\u7528\u306e\u30c7\u30d0\u30a4\u30b9\u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u30b9\u30c8\u30a2\u3067<b>Google Authenticator</b>\u3092\u691c\u7d22\u3057\u307e\u3059\u3002<br/>\u591a\u304f\u306e\u30c7\u30d0\u30a4\u30b9\u3067\u306f\u3001\u4e92\u63db\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u304c\u3042\u308a\u307e\u3059\u3002</li><li>\u300c<b>TOTP\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u30fc\u30c8\u30fc\u30af\u30f3\u300d</b>\u307e\u305f\u306f\u300cRFC6238\u300d\u3092\u30b5\u30dd\u30fc\u30c8\u3059\u308b\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u63a2\u3057\u3066\u307f\u3066\u304f\u3060\u3055\u3044\u3002</li><li>\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3057\u307e\u3059\u3002</li></ul><b>\u6b21\u306b\u3001\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u958b\u3044\u3066\u8a2d\u5b9a\u3057\u307e\u3059\u3002</b><ol><li>\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u624b\u9806\u306b\u5f93\u3063\u3066\u3001\u4e0b\u306e\u30c7\u30fc\u30bf\u3092\u5165\u529b\u3059\u308b\u304b\u3001\u30b3\u30fc\u30c9\u3092\u30b9\u30ad\u30e3\u30f3\u3057\u307e\u3059\u3002</li><li>\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u8a2d\u5b9a\u3057\u305f\u3089\u3001\u6b21\u3078\u9032\u3080\u30dc\u30bf\u30f3\u3092\u30af\u30ea\u30c3\u30af\u3057\u307e\u3059\u3002</li></ol>
 Display_TokenDestination=\u30c8\u30fc\u30af\u30f3\u306e\u5b9b\u5148
-Display_UsernameHeader=@User:ID@
-Display_UsernameFooter=@User:ID@
-Display_WarnExistingOtpSecretTime=\u3054\u4f7f\u7528\u306e\u30c7\u30d0\u30a4\u30b9\u306f\u3001\u3059\u3067\u306b <span class="timestamp">%1%</span> \u306b\u767b\u9332\u3055\u308c\u3066\u3044\u307e\u3059\u3002\u751f\u6210\u3055\u308c\u305f\u4e0b\u306e\u30b3\u30fc\u30c9\u3092\u5165\u529b\u3059\u308b\u3053\u3068\u306b\u3088\u308a\u3001\u73fe\u5728\u4f7f\u7528\u3057\u3066\u3044\u308b\u30c7\u30d0\u30a4\u30b9\u3092\u30c6\u30b9\u30c8\u3067\u304d\u307e\u3059\u3002\u7d9a\u884c\u3059\u308b\u3068\u3001\u73fe\u5728\u4f7f\u7528\u3057\u3066\u3044\u308b\u30c7\u30d0\u30a4\u30b9\u3092\u518d\u8a2d\u5b9a\u3067\u304d\u307e\u3059\u3002
+Display_UsernameHeader=@User\:ID@
+Display_UsernameFooter=@User\:ID@
+Display_WarnExistingOtpSecretTime=\u3054\u4f7f\u7528\u306e\u30c7\u30d0\u30a4\u30b9\u306f\u3001\u3059\u3067\u306b <span class\="timestamp">%1%</span> \u306b\u767b\u9332\u3055\u308c\u3066\u3044\u307e\u3059\u3002\u751f\u6210\u3055\u308c\u305f\u4e0b\u306e\u30b3\u30fc\u30c9\u3092\u5165\u529b\u3059\u308b\u3053\u3068\u306b\u3088\u308a\u3001\u73fe\u5728\u4f7f\u7528\u3057\u3066\u3044\u308b\u30c7\u30d0\u30a4\u30b9\u3092\u30c6\u30b9\u30c8\u3067\u304d\u307e\u3059\u3002\u7d9a\u884c\u3059\u308b\u3068\u3001\u73fe\u5728\u4f7f\u7528\u3057\u3066\u3044\u308b\u30c7\u30d0\u30a4\u30b9\u3092\u518d\u8a2d\u5b9a\u3067\u304d\u307e\u3059\u3002
 Display_WarnExistingOtpSecret=\u3054\u4f7f\u7528\u306e\u30c7\u30d0\u30a4\u30b9\u306f\u3001\u3059\u3067\u306b\u767b\u9332\u3055\u308c\u3066\u3044\u307e\u3059\u3002\u751f\u6210\u3055\u308c\u305f\u4e0b\u306e\u30b3\u30fc\u30c9\u3092\u5165\u529b\u3059\u308b\u3053\u3068\u306b\u3088\u308a\u3001\u73fe\u5728\u4f7f\u7528\u3057\u3066\u3044\u308b\u30c7\u30d0\u30a4\u30b9\u3092\u30c6\u30b9\u30c8\u3067\u304d\u307e\u3059\u3002\u7d9a\u884c\u3059\u308b\u3068\u3001\u73fe\u5728\u4f7f\u7528\u3057\u3066\u3044\u308b\u30c7\u30d0\u30a4\u30b9\u3092\u518d\u8a2d\u5b9a\u3067\u304d\u307e\u3059\u3002
 Display_WarnExistingResponseTime=\u3059\u3067\u306b <span class\="timestamp">%1%</span> \u3067\u79d8\u5bc6\u306e\u8cea\u554f\u306e\u7b54\u3048\u304c\u8a2d\u5b9a\u3055\u308c\u3066\u3044\u307e\u3059\u3002\u7d9a\u884c\u3059\u308b\u3068\u3001\u8cea\u554f\u306b\u5bfe\u3059\u308b\u7b54\u3048\u3092\u518d\u8a2d\u5b9a\u3067\u304d\u307e\u3059\u3002
 Display_WarnExistingResponse=\u3059\u3067\u306b\u79d8\u5bc6\u306e\u8cea\u554f\u306e\u7b54\u3048\u304c\u8a2d\u5b9a\u3055\u308c\u3066\u3044\u307e\u3059\u3002\u7d9a\u884c\u3059\u308b\u3068\u3001\u8cea\u554f\u306b\u5bfe\u3059\u308b\u7b54\u3048\u3092\u518d\u8a2d\u5b9a\u3067\u304d\u307e\u3059\u3002
@@ -237,6 +239,7 @@ Field_VerificationMethodChallengeResponses=\u79d8\u5bc6\u306e\u8cea\u554f\u3068\
 Field_VerificationMethodAttributes=\u500b\u4eba\u30c7\u30fc\u30bf
 Field_VerificationMethodRemoteResponses=\u5916\u90e8\u5fdc\u7b54
 Field_VerificationMethodNAAF=Advanced Authentication
+Field_VerificationMethodOAuth=\u5916\u90e8\u8a8d\u8a3c
 Field_Placeholder_Answer=\u7b54\u3048
 Long_Title_ActivateUser=\u4e8b\u524d\u8a2d\u5b9a\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u6709\u52b9\u306b\u3057\u3066\u3001\u65b0\u3057\u3044\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u8a2d\u5b9a\u3057\u307e\u3059\u3002
 Long_Title_Admin=\u7ba1\u7406\u6a5f\u80fd
@@ -256,6 +259,7 @@ Long_Title_Shortcuts=\u30b7\u30e7\u30fc\u30c8\u30ab\u30c3\u30c8\u304c\u30d1\u30f
 Long_Title_UpdateProfile=\u30e6\u30fc\u30b6\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u30c7\u30fc\u30bf\u3092\u66f4\u65b0\u3057\u307e\u3059\u3002
 Long_Title_UserEventHistory=\u30d1\u30b9\u30ef\u30fc\u30c9\u30a4\u30d9\u30f3\u30c8\u5c65\u6b74\u3002\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u3044\u3064\u5909\u66f4\u3057\u305f\u304b\u3092\u78ba\u8a8d\u3067\u304d\u307e\u3059\u3002
 Long_Title_UserInformation=\u30d1\u30b9\u30ef\u30fc\u30c9\u3068\u30d1\u30b9\u30ef\u30fc\u30c9\u30dd\u30ea\u30b7\u30fc\u306b\u95a2\u3059\u308b\u60c5\u5831\u3067\u3059\u3002
+Long_Title_DeleteAccount=\u3053\u306e\u30b5\u30fc\u30d3\u30b9\u304b\u3089\u30a2\u30ab\u30a6\u30f3\u30c8\u3068\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u3092\u524a\u9664\u3059\u308b
 Long_Title_VerificationSend=\u3053\u306e\u30e6\u30fc\u30b6\u3092\u9078\u629e\u3059\u308b\u524d\u306b\u3001\u30e6\u30fc\u30b6\u306e\u672c\u4eba\u78ba\u8a8d\u3092\u884c\u3046\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002\u691c\u8a3c\u65b9\u6cd5\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 Title_AnsweredQuestions=\u56de\u7b54\u6e08\u307f\u306e\u8cea\u554f
 Title_ActivateUser=\u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u6709\u52b9\u5316
@@ -273,6 +277,7 @@ Title_Helpdesk=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af
 Title_LocaleSelect=\u30ed\u30b1\u30fc\u30eb\u306e\u9078\u629e
 Title_Login=\u30ed\u30b0\u30a4\u30f3\u3057\u3066\u304f\u3060\u3055\u3044
 Title_Logout=\u30ed\u30b0\u30a2\u30a6\u30c8
+Title_LogoutPublic=\u975e\u30a2\u30af\u30c6\u30a3\u30d6\u30bf\u30a4\u30e0\u30a2\u30a6\u30c8
 Title_MainPage=\u30e1\u30a4\u30f3\u30e1\u30cb\u30e5\u30fc
 Title_NewUser=\u65b0\u898f\u30e6\u30fc\u30b6\u767b\u9332
 Title_OrgChart=\u7d44\u7e54\u30c1\u30e3\u30fc\u30c8
@@ -299,10 +304,15 @@ Title_TitleBarAuthenticated=@User\:ID@  \u30d1\u30b9\u30ef\u30fc\u30c9\u30bb\u30
 Title_TitleBar=\u30d1\u30b9\u30ef\u30fc\u30c9\u30bb\u30eb\u30d5\u30b5\u30fc\u30d3\u30b9
 Title_UpdateProfile=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u306e\u66f4\u65b0
 Title_UpdateProfileConfirm=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u30c7\u30fc\u30bf\u306e\u78ba\u8a8d
+Title_UserData=\u30c7\u30fc\u30bf
 Title_UserEventHistory=\u30d1\u30b9\u30ef\u30fc\u30c9\u5c65\u6b74
 Title_UserInformation=\u30a2\u30ab\u30a6\u30f3\u30c8
 Title_ValidateCode=\u30b3\u30fc\u30c9\u306e\u691c\u8a3c
 Title_VerificationSend=\u691c\u8a3c\u65b9\u6cd5\u306e\u9078\u629e
+Title_DeleteAccount=\u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u524a\u9664
+Title_Management=\u7ba1\u7406
+Title_DirectReports=\u30c0\u30a4\u30ec\u30af\u30c8\u30ec\u30dd\u30fc\u30c8
+Title_Organization=\u7d44\u7e54
 Tooltip_PasswordStrength=\u30d1\u30b9\u30ef\u30fc\u30c9\u5f37\u5ea6\u30e1\u30fc\u30bf\u306f\u3001\u30d1\u30b9\u30ef\u30fc\u30c9\u306e\u63a8\u6e2c\u306e\u5bb9\u6613\u3055\u3092\u793a\u3057\u307e\u3059\u3002\u30d1\u30b9\u30ef\u30fc\u30c9\u5f37\u5ea6\u3092\u4e0a\u3052\u308b\u305f\u3081\u306b\u6b21\u306e\u5bfe\u7b56\u3092\u8b1b\u3058\u3066\u304f\u3060\u3055\u3044\:<ul><li>\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u3088\u308a\u9577\u304f\u3057\u307e\u3059\u3002</li><li>\u82f1\u5b57\u307e\u305f\u306f\u6570\u5b57\u3092\u7e70\u308a\u8fd4\u3055\u306a\u3044\u3088\u3046\u306b\u3057\u307e\u3059\u3002</li><li>\u5927\u6587\u5b57\u3068\u5c0f\u6587\u5b57\u3092\u7d44\u307f\u5408\u308f\u305b\u307e\u3059\u3002</li><li>\u6570\u5b57\u3092\u5897\u3084\u3057\u307e\u3059\u3002</li><li>\u8a18\u53f7\u3092\u5897\u3084\u3057\u307e\u3059\u3002</li></ul>
 Confirm_DeleteUser=\u7d9a\u884c\u3057\u307e\u3059\u304b\uff1f\u7d9a\u884c\u3059\u308b\u3068\u3001\u9078\u629e\u3055\u308c\u3066\u3044\u308b\u30e6\u30fc\u30b6\u30fc\u304c\u5b8c\u5168\u306b\u524a\u9664\u3055\u308c\u307e\u3059\u3002\u3053\u308c\u306f\u3001\u5143\u306b\u623b\u3059\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3002
 Confirm=\u7d9a\u884c\u3057\u307e\u3059\u304b?
