--- a/src/main/resources/password/pwm/i18n/Display_pl.properties
+++ b/src/main/resources/password/pwm/i18n/Display_pl.properties
@@ -1,4 +1,4 @@
-#Mon, 04 Apr 2016 05:53:55 -0400
+#Tue, 08 Nov 2016 18:41:50 -0500
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -81,6 +81,7 @@ Display_CommunicationError=Nie mo\u017cna nawi\u0105za\u0107 komunikacji z serwe
 Display_ConfirmResponses=Upewnij si\u0119, \u017ce odpowiedzi i pytania s\u0105 poprawne. Sprawd\u017a pisowni\u0119 i interpunkcj\u0119. Je\u015bli zapomnisz has\u0142a, dost\u0119p do konta b\u0119dzie mo\u017cliwy przez podanie odpowiedzi na te pytania zabezpieczaj\u0105ce.
 Display_Day=dzie\u0144
 Display_Days=dni
+Display_DeleteUserConfirm=Czy na pewno chcesz usun\u0105\u0107 swoje konto? Tej czynno\u015bci nie mo\u017cna cofn\u0105\u0107.
 Display_ErrorBody=Wyst\u0105pi\u0142 b\u0142\u0105d. Zamknij przegl\u0105dark\u0119 i spr\u00f3buj ponownie. Je\u015bli ten b\u0142\u0105d si\u0119 powtarza, skontaktuj si\u0119 z pomoc\u0105 techniczn\u0105.
 Display_ErrorReference=odwo\u0142anie do b\u0142\u0119du %1%
 Display_ExpirationDate=Data wyga\u015bni\u0119cia konta (maksymalnie %1% dni)
@@ -94,13 +95,14 @@ Display_HelpdeskOtpValidation=Poinstruuj u\u017cytkownika, aby za\u0142adowa\u01
 Display_Hour=godzina
 Display_Hours=godz.
 Display_IdleTimeout=Limit czasu bezczynno\u015bci\:
-Display_IdleWarningMessage=Sesja przegl\u0105darki za chwil\u0119 wyga\u015bnie. Kliknij dowolne miejsce na tej stronie, aby wznowi\u0107.
+Display_IdleWarningMessage=Za chwil\u0119 up\u0142ynie limit czasu sesji. Kliknij dowolne miejsce na tej stronie, aby wznowi\u0107 prac\u0119.
 Display_IdleWarningTitle=Limit czasu bezczynno\u015bci
 Display_JavascriptRequired=Do wy\u015bwietlenia tej strony wymagana jest obs\u0142uga skrypt\u00f3w Javascript.
 Display_LeaveDirtyPasswordPage=Je\u015bli opu\u015bcisz t\u0119 stron\u0119, has\u0142o nie zostanie zmienione.
 Display_Login=
 Display_LoginPasswordOnly=Wprowad\u017a poni\u017cej swoje has\u0142o. Do uzyskania dost\u0119pu do tej aplikacji wymagane jest bie\u017c\u0105ce has\u0142o.
-Display_Logout=<b>Nast\u0105pi\u0142o wylogowanie.</b><p/>Zamknij wszystkie okna przegl\u0105darki internetowej, zanim spr\u00f3bujesz zalogowa\u0107 si\u0119 ponownie.
+Display_Logout=Nast\u0105pi\u0142o wylogowanie.
+Display_LogoutPublic=Up\u0142yn\u0105\u0142 limit czasu sesji z powodu nieaktywno\u015bci.
 Display_Minute=minuta
 Display_Minutes=min
 Display_NAAF_PASSWORD=Podaj has\u0142o uwierzytelniania NAAF.
@@ -129,7 +131,7 @@ Display_PleaseWait=\u0141adowanie...
 Display_PleaseWaitNewUser=Trwa konfigurowanie nowego konta. Zachowaj cierpliwo\u015b\u0107, ten proces mo\u017ce potrwa\u0107 kilka minut.
 Display_PleaseWaitPassword=Trwa zmienianie has\u0142a. Zachowaj cierpliwo\u015b\u0107, ten proces mo\u017ce potrwa\u0107 kilka minut.
 Display_Random=Losowo
-Display_RecoverVerificationChoice=Wybierz jedn\u0105 z nast\u0119puj\u0105cych metod zweryfikowania swojej to\u017csamo\u015bci.
+Display_RecoverVerificationChoice=Wybierz jedn\u0105 z nast\u0119puj\u0105cych metod weryfikowania to\u017csamo\u015bci. Uwaga\: je\u015bli administrator wymaga wielu form weryfikacji, b\u0119dzie nast\u0119powa\u0142o przekierowanie z powrotem do tej strony, a\u017c zostan\u0105 spe\u0142nione wszystkie kryteria weryfikacji.
 Display_RecoverTokenSendChoices=W celu zweryfikowania Twojej to\u017csamo\u015bci zostanie do Ciebie wys\u0142any kod zabezpiecze\u0144. Wybierz preferowan\u0105 metod\u0119 otrzymania kodu zabezpiecze\u0144.
 Display_RecoverTokenSendChoiceEmail=Wy\u015blij kod na zarejestrowane adresy e-mail.
 Display_RecoverTokenSendChoiceSMS=Wy\u015blij kod na telefon kom\u00f3rkowy przy u\u017cyciu wiadomo\u015bci tekstowej (SMS).
@@ -164,9 +166,9 @@ Display_SetupOtp_iPhone_Steps=<b>Na telefonie iPhone stuknij ikon\u0119 App Stor
 Display_SetupOtp_Other_Title=Inne
 Display_SetupOtp_Other_Steps=<b>Znajd\u017a zgodn\u0105 aplikacj\u0119 do uwierzytelniania dwuczynnikowego.</b><ul><li>Spr\u00f3buj wyszuka\u0107 w sklepie z aplikacjami urz\u0105dzenia aplikacj\u0119 <b>Google Authenticator</b>.<br/>Wiele urz\u0105dze\u0144 ma zgodne aplikacje.</li><li>Spr\u00f3buj poszuka\u0107 aplikacji, kt\u00f3ra obs\u0142uguje <b>\u201etokeny zabezpiecze\u0144 TOTP\u201d</b> lub \u201eRFC6238\u201d.</li><li>Pobierz i zainstaluj aplikacj\u0119.</li></ul><b>Nast\u0119pnie otw\u00f3rz i skonfiguruj aplikacj\u0119</b><ol><li>Wprowad\u017a dane poni\u017cej lub zeskanuj kod, zgodnie z instrukcj\u0105 aplikacji.</li><li>Po skonfigurowaniu aplikacji kliknij przycisk Kontynuuj.</li></ol>
 Display_TokenDestination=Miejsce docelowe tokenu
-Display_UsernameHeader=@User:ID@
-Display_UsernameFooter=@User:ID@
-Display_WarnExistingOtpSecretTime=Urz\u0105dzenie zosta\u0142o ju\u017c zarejestrowane dnia <span class="timestamp">%1%</span>. Mo\u017cesz przetestowa\u0107 bie\u017c\u0105ce urz\u0105dzenie, wpisuj\u0105c poni\u017cej wygenerowany kod. W przypadku kontynuowania mo\u017cesz skonfigurowa\u0107 ponownie bie\u017c\u0105ce urz\u0105dzenie.
+Display_UsernameHeader=@User\:ID@
+Display_UsernameFooter=@User\:ID@
+Display_WarnExistingOtpSecretTime=Urz\u0105dzenie zosta\u0142o ju\u017c zarejestrowane dnia <span class\="timestamp">%1%</span>. Mo\u017cesz przetestowa\u0107 bie\u017c\u0105ce urz\u0105dzenie, wpisuj\u0105c poni\u017cej wygenerowany kod. W przypadku kontynuowania mo\u017cesz skonfigurowa\u0107 ponownie bie\u017c\u0105ce urz\u0105dzenie.
 Display_WarnExistingOtpSecret=Urz\u0105dzenie zosta\u0142o ju\u017c zarejestrowane. Mo\u017cesz przetestowa\u0107 bie\u017c\u0105ce urz\u0105dzenie, wpisuj\u0105c poni\u017cej wygenerowany kod. W przypadku kontynuowania mo\u017cesz skonfigurowa\u0107 ponownie bie\u017c\u0105ce urz\u0105dzenie.
 Display_WarnExistingResponseTime=Odpowiedzi polecenia odzew/odpowied\u017a zosta\u0142y ju\u017c skonfigurowane dnia <span class\="timestamp">%1%</span>. W przypadku kontynuowania mo\u017cesz odpowiedzie\u0107 ponownie na pytania.
 Display_WarnExistingResponse=Odpowiedzi polecenia odzew/odpowied\u017a zosta\u0142y ju\u017c skonfigurowane. W przypadku kontynuowania mo\u017cesz odpowiedzie\u0107 ponownie na pytania.
@@ -237,6 +239,7 @@ Field_VerificationMethodChallengeResponses=Tajne pytania i odpowiedzi
 Field_VerificationMethodAttributes=Dane osobowe
 Field_VerificationMethodRemoteResponses=Zewn\u0119trzne odpowiedzi
 Field_VerificationMethodNAAF=Advanced Authentication
+Field_VerificationMethodOAuth=Uwierzytelnianie zewn\u0119trzne
 Field_Placeholder_Answer=Odpowied\u017a
 Long_Title_ActivateUser=Aktywuj wst\u0119pnie skonfigurowane konto i ustal nowe has\u0142o.
 Long_Title_Admin=Funkcje administracyjne
@@ -256,6 +259,7 @@ Long_Title_Shortcuts=Spersonalizowane skr\u00f3ty.
 Long_Title_UpdateProfile=Aktualizuj dane profilu u\u017cytkownika.
 Long_Title_UserEventHistory=Historia zdarze\u0144 has\u0142a. Zobacz, kiedy has\u0142o by\u0142o zmieniane w przesz\u0142o\u015bci.
 Long_Title_UserInformation=Informacje o ha\u015ble i za\u0142o\u017ceniach hase\u0142.
+Long_Title_DeleteAccount=Usu\u0144 swoje konto i profil z tej us\u0142ugi
 Long_Title_VerificationSend=Zanim b\u0119dzie mo\u017cna wybra\u0107 tego u\u017cytkownika, nale\u017cy zweryfikowa\u0107 jego to\u017csamo\u015b\u0107. Wybierz metod\u0119 weryfikacji.
 Title_AnsweredQuestions=Pytania, na kt\u00f3re udzielono odpowiedzi
 Title_ActivateUser=Aktywuj konto
@@ -273,6 +277,7 @@ Title_Helpdesk=Pomoc techniczna
 Title_LocaleSelect=Wyb\u00f3r lokalizacji
 Title_Login=Zaloguj si\u0119
 Title_Logout=Wyloguj
+Title_LogoutPublic=Limit czasu nieaktywno\u015bci
 Title_MainPage=Menu g\u0142\u00f3wne
 Title_NewUser=Rejestracja nowego u\u017cytkownika
 Title_OrgChart=Wykres organizacyjny
@@ -299,10 +304,15 @@ Title_TitleBarAuthenticated=Samodzielna obs\u0142uga hase\u0142 dla u\u017cytkow
 Title_TitleBar=Samodzielna obs\u0142uga hase\u0142
 Title_UpdateProfile=Aktualizuj profil
 Title_UpdateProfileConfirm=Potwierd\u017a dane profilu
+Title_UserData=Moje dane
 Title_UserEventHistory=Historia has\u0142a
 Title_UserInformation=Moje konto
 Title_ValidateCode=Zatwierdzanie kodu
 Title_VerificationSend=Wybierz metod\u0119 weryfikacji
+Title_DeleteAccount=Usu\u0144 moje konto
+Title_Management=Zarz\u0105dzanie
+Title_DirectReports=Raporty bezpo\u015brednie
+Title_Organization=Organizacja
 Tooltip_PasswordStrength=Miernik si\u0142y has\u0142a pokazuje, jak \u0142atwe do odgadni\u0119cia jest has\u0142o. Zastosuj poni\u017csze wskaz\u00f3wki, aby zwi\u0119kszy\u0107 si\u0142\u0119 has\u0142a\:<ul><li>Zwi\u0119ksz d\u0142ugo\u015b\u0107 has\u0142a</li><li>Nie powtarzaj liter ani cyfr</li><li>U\u017cywaj du\u017cych i ma\u0142ych liter</li><li>Dodaj wi\u0119cej cyfr</li><li>Dodaj wi\u0119cej symboli</li></ul>
 Confirm_DeleteUser=Czy na pewno chcesz kontynuowa\u0107? Kontynuowanie spowoduje trwa\u0142e usuni\u0119cie wybranego u\u017cytkownika. Tego dzia\u0142ania nie mo\u017cna cofn\u0105\u0107.
 Confirm=Czy na pewno chcesz kontynuowa\u0107?
