--- a/src/main/resources/password/pwm/i18n/Error_ca.properties
+++ b/src/main/resources/password/pwm/i18n/Error_ca.properties
@@ -66,8 +66,8 @@ Password_NotEnoughGroups=La contrasenya nova no t\u00e9 prou tipus de car\u00e0c
 Password_TooManyConsecutive=La contrasenya nova t\u00e9 massa car\u00e0cters consecutius (per exemple 123456... o abcdef...)
 
 Error_WrongResponse=Almenys una resposta \u00e9s incorrecta. Torni a provar-ho.
-Error_WrongPassword=El nom d'usuari o la contrasenya no s\u00f3n v\u00e0lids. Torni a provar-ho.
-Error_Response_NoResponse=El nom d'usuari no \u00e9s v\u00e0lid o no t\u00e9 dret a utilitzar aquesta caracter\u00edstica
+Error_WrongPassword=El nom d'usuari o la contrasenya no s\u00f3n v\u00e0lids. Torneu a provar-ho.
+Error_Response_NoResponse=El nom d'usuari no \u00e9s v\u00e0lid o no t\u00e9 drets per utilitzar aquesta caracter\u00edstica
 Error_Response_TooShort=La resposta a la pregunta "%1%" \u00e9s massa curta
 Error_Response_Wordlist=La resposta a la pregunta "%1%" \u00e9s massa comuna
 Error_Response_TooLong=La resposta a la pregunta "%1%" \u00e9s massa llarga
@@ -76,10 +76,10 @@ Error_Challenge_Duplicate=Les preguntes no es poden repetir.
 Error_Missing_Challenge_Text=Falta text en una de les preguntes proporcionades per l'usuari
 Error_UserAuthenticated=Ja est\u00e0 autenticat.
 Error_MissingParameter=Falta un par\u00e0metre necessari.
-Error_DirectoryUnavailable=El directori no est\u00e0 disponible. Si l'error continua, contacti amb el servei d'assist\u00e8ncia.
-Error_Unknown=Hi ha hagut un error. Si l'error continua, contacti amb el servei d'assist\u00e8ncia.
+Error_DirectoryUnavailable=El directori no est\u00e0 disponible. Si l'error continua, contacteu amb el servei d'assist\u00e8ncia.
+Error_Unknown=Hi ha hagut un error. Si l'error continua, contacteu amb el servei d'assist\u00e8ncia.
 Error_ActivationValidationFailed=Almenys un dels valors \u00e9s incorrecte.
-Error_CantMatchUser=No s'ha trobat el nom d'usuari. Torni a provar-ho.
+Error_CantMatchUser=No s'ha trobat el nom d'usuari. Torneu a provar-ho.
 Error_ServiceNotAvailable=El servei no est\u00e0 habilitat.
 Error_UserMisMatch=Error d'autenticaci\u00f3, tanqui el navegador.
 Error_ActivateUserNoQueryMatch=El seu compte d'usuari no compleix els requisits per activar-lo.
@@ -94,7 +94,7 @@ Error_BadSession=No s'ha pogut establir una sessi\u00f3 amb el navegador. Tanqui
 Error_MissingRequiredResponse=Introdueixi totes les respostes obligat\u00f2ries.
 Error_MissingRandomResponse=Afegeixi una resposta aleat\u00f2ria addicional.
 Error_BadCaptchaResponse=Codi de verificaci\u00f3 incorrecte; torni a provar-ho.
-Error_CaptchaAPIError=Hi ha hagut un error mentre es validava la resposta al CAPTCHA. Tanqui el navegador i torni a provar-ho. Si l'error continua, contacti amb el servei d'assist\u00e8ncia.
+Error_CaptchaAPIError=Hi ha hagut un error mentre es validava la resposta al CAPTCHA. Tanqueu el navegador i torneu a provar-ho. Si l'error continua, contacteu amb el servei d'assist\u00e8ncia.
 Error_InvalidConfig=La configuraci\u00f3 no \u00e9s v\u00e0lida o est\u00e0 malmesa. Corregeixi l'error o elimini el fitxer de configuraci\u00f3.
 Error_InvalidFormID=La sessi\u00f3 del navegador no \u00e9s v\u00e0lida o ha caducat. Torni a provar-ho.
 Error_TokenMissingContact=No hi ha informaci\u00f3 de contacte per al seu compte. Contacti amb l'administrador.
@@ -120,7 +120,7 @@ Error_InvalidSecurityKey=No es troba la clau de seguretat o no \u00e9s v\u00e0li
 Error_Clearing_Responses=Hi ha hagut un error mentre s'esborraven les preguntes. Contacti amb l'administrador.
 Error_ServiceUnreachable=No est\u00e0 disponible un servei necessari. Torni a provar-ho m\u00e9s tard.
 Error_ChallengeInResponse=La resposta a la pregunta "%1%" no pot contenir part del text de la mateixa pregunta.
-Error_Multi_Username=Hi ha diversos usuaris coincidents amb el nom d'usuari proporcionat "%1%". Refini la cerca.
+Error_Multi_Username=Hi ha diversos usuaris coincidents amb el nom d'usuari proporcionat "%1%". Refineu la cerca.
 Error_CertificateError=Hi ha hagut un error de certificat: %1%.
 Error_SyslogWriteError=Hi ha hagut un problema a l'hora d'escriure en el servidor syslog que ha ocasionat l'error: %1%
 Error_TooManyThreads=S'ha superat el l\u00edmit m\u00e0xim de nombre de fils; torni a provar-ho m\u00e9s tard.
@@ -157,6 +157,7 @@ Error_NoProfileAssigned=No hi ha cap perfil assignat per a aquesta operaci\u00f3
 Error_StartupError=Hi ha hagut un error mentre s'iniciava l'aplicaci\u00f3. Comprovi els fitxers de registre per obtenir m\u00e9s informaci\u00f3.
 Error_EnvironmentError=Un error amb l'entorn de l'aplicaci\u00f3 ha fet que l'aplicaci\u00f3 no s'hagi iniciat.
 Error_ApplicationNotRunning=Aquesta funcionalitat no estar\u00e0 disponible fins que la configuraci\u00f3 de l'aplicaci\u00f3 s'hagi restringit.
+Error_EmailSendFailure=S'ha produ\u00eft un error en enviar l'element de correu electr\u00f2nic %1%. Error: %2%
 
 Error_RemoteErrorValue=Error remot: %1%
 
