--- a/src/main/resources/password/pwm/i18n/Error_de.properties
+++ b/src/main/resources/password/pwm/i18n/Error_de.properties
@@ -157,6 +157,7 @@ Error_NoProfileAssigned=Dieser Operation ist kein Profil zugewiesen.
 Error_StartupError=Fehler beim Starten der Anwendung. Weitere Informationen finden Sie in den Protokolldateien.
 Error_EnvironmentError=Ein Fehler der Anwendungsumgebung hat das Starten der Anwendung verhindert.
 Error_ApplicationNotRunning=Diese Funktion ist erst verf\u00fcgbar, wenn die Anwendungskonfiguration eingeschr\u00e4nkt ist.
+Error_EmailSendFailure=Fehler beim Senden des Email-Elements %1%, Fehler: %2%
 
 Error_RemoteErrorValue=Remotefehler: %1%
 
