--- a/src/main/resources/password/pwm/i18n/Error_fr.properties
+++ b/src/main/resources/password/pwm/i18n/Error_fr.properties
@@ -67,7 +67,7 @@ Password_TooManyConsecutive=Le nouveau mot de passe comporte trop de caract\u00e
 
 Error_WrongResponse=Une ou plusieurs r\u00e9ponses sont incorrectes. Veuillez r\u00e9essayer.
 Error_WrongPassword=Le nom d'utilisateur ou le mot de passe n'est pas valide. Veuillez r\u00e9essayer.
-Error_Response_NoResponse=Le nom d'utilisateur n'est pas valide ou ne peut pas utiliser cette fonctionnalit\u00e9
+Error_Response_NoResponse=Le nom d'utilisateur n'est pas valide ou ne peut pas utiliser cette fonctionnalit\u00e9.
 Error_Response_TooShort=La r\u00e9ponse \u00e0 la question "%1%" est trop courte
 Error_Response_Wordlist=La r\u00e9ponse \u00e0 la question "%1%" est trop courante
 Error_Response_TooLong=La r\u00e9ponse \u00e0 la question "%1%" est trop longue.
@@ -157,6 +157,7 @@ Error_NoProfileAssigned=Aucun profil n'est assign\u00e9 \u00e0 cette op\u00e9rat
 Error_StartupError=Une erreur s'est produite au d\u00e9marrage de l'application. Consultez les fichiers journaux pour plus d'informations.
 Error_EnvironmentError=Une erreur li\u00e9e \u00e0 l'environnement de l'application a emp\u00each\u00e9 le d\u00e9marrage de cette derni\u00e8re.
 Error_ApplicationNotRunning=Cette fonctionnalit\u00e9 n'est pas disponible tant que la configuration de l'application est restreinte.
+Error_EmailSendFailure=Une erreur s'est produite lors de l'envoi du courrier \u00e9lectronique %1%. Erreur : %2%
 
 Error_RemoteErrorValue=Erreur distante : %1%
 
