--- a/src/main/resources/password/pwm/i18n/Error_nl.properties
+++ b/src/main/resources/password/pwm/i18n/Error_nl.properties
@@ -157,6 +157,7 @@ Error_NoProfileAssigned=Er is geen profiel toegewezen voor deze bewerking.
 Error_StartupError=Er is een fout opgetreden bij het starten van de toepassing. Raadpleeg de logbestanden voor informatie.
 Error_EnvironmentError=Als gevolg van een fout met de toepassingsomgeving kan de toepassing niet worden gestart.
 Error_ApplicationNotRunning=Deze functionaliteit is pas beschikbaar als de toepassingsconfiguratie wordt beperkt.
+Error_EmailSendFailure=Fout bij verzenden van e-mailitem %1%, fout: %2%
 
 Error_RemoteErrorValue=Externe fout: %1%
 
