--- a/src/main/resources/password/pwm/i18n/Error_pl.properties
+++ b/src/main/resources/password/pwm/i18n/Error_pl.properties
@@ -94,7 +94,7 @@ Error_BadSession=Nie mo\u017cna ustanowi\u0107 sesji za pomoc\u0105 tej przegl\u
 Error_MissingRequiredResponse=Wpisz wszystkie wymagane odpowiedzi.
 Error_MissingRandomResponse=Wprowad\u017a dodatkow\u0105 odpowied\u017a losow\u0105.
 Error_BadCaptchaResponse=Nieprawid\u0142owy kod weryfikacyjny. Spr\u00f3buj ponownie.
-Error_CaptchaAPIError=Wyst\u0105pi\u0142 b\u0142\u0105d podczas weryfikowania odpowiedzi captcha. Zamknij przegl\u0105dark\u0119 i spr\u00f3buj ponownie. Je\u015bli ten b\u0142\u0105d si\u0119 powtarza, skontaktuj si\u0119 z pomoc\u0105 techniczn\u0105.
+Error_CaptchaAPIError=Wyst\u0105pi\u0142 b\u0142\u0105d podczas weryfikowania odpowiedzi CAPTCHA. Zamknij przegl\u0105dark\u0119 i spr\u00f3buj ponownie. Je\u015bli ten b\u0142\u0105d si\u0119 powtarza, skontaktuj si\u0119 z pomoc\u0105 techniczn\u0105.
 Error_InvalidConfig=Konfiguracja jest nieprawid\u0142owa lub uszkodzona. Popraw b\u0142\u0105d lub usu\u0144 plik konfiguracyjny.
 Error_InvalidFormID=Sesja przegl\u0105darki jest nieprawid\u0142owa lub wygas\u0142a. Spr\u00f3buj ponownie.
 Error_TokenMissingContact=Brak dost\u0119pnych informacji kontaktowych dla tego konta. Skontaktuj si\u0119 z administratorem.
@@ -157,6 +157,7 @@ Error_NoProfileAssigned=Brak profilu przypisanego do tej operacji.
 Error_StartupError=Wyst\u0105pi\u0142 b\u0142\u0105d podczas uruchamiania aplikacji. Aby uzyska\u0107 wi\u0119cej informacji, sprawd\u017a pliki dziennik\u00f3w.
 Error_EnvironmentError=B\u0142\u0105d \u015brodowiska aplikacji uniemo\u017cliwi\u0142 uruchomienie aplikacji.
 Error_ApplicationNotRunning=Ta funkcja jest niedost\u0119pna, dop\u00f3ki konfiguracja aplikacji jest ograniczona.
+Error_EmailSendFailure=B\u0142\u0105d podczas wysy\u0142ania elementu poczty e-mail %1%, b\u0142\u0105d: %2%
 
 Error_RemoteErrorValue=B\u0142\u0105d zdalny: %1%
 
