--- a/src/main/resources/password/pwm/i18n/Error_zh_TW.properties
+++ b/src/main/resources/password/pwm/i18n/Error_zh_TW.properties
@@ -94,7 +94,7 @@ Error_BadSession=\u7121\u6cd5\u5efa\u7acb\u700f\u89bd\u5668\u5de5\u4f5c\u968e\u6
 Error_MissingRequiredResponse=\u8acb\u8f38\u5165\u6240\u6709\u5fc5\u8981\u7684\u56de\u61c9\u3002
 Error_MissingRandomResponse=\u8acb\u65b0\u589e\u5176\u4ed6\u96a8\u6a5f\u56de\u61c9\u3002
 Error_BadCaptchaResponse=\u9a57\u8b49\u78bc\u4e0d\u6b63\u78ba\uff0c\u8acb\u518d\u8a66\u4e00\u6b21\u3002
-Error_CaptchaAPIError=\u9a57\u8b49 captcha \u56de\u61c9\u6642\u767c\u751f\u932f\u8aa4\u3002\u8acb\u95dc\u9589\u60a8\u7684\u700f\u89bd\u5668\uff0c\u7136\u5f8c\u518d\u8a66\u4e00\u6b21\u3002\u5982\u679c\u6b64\u932f\u8aa4\u91cd\u8907\u767c\u751f\uff0c\u8acb\u806f\u7d61\u60a8\u7684\u670d\u52d9\u53f0\u3002
+Error_CaptchaAPIError=\u9a57\u8b49 CAPTCHA \u56de\u61c9\u6642\u767c\u751f\u932f\u8aa4\u3002\u8acb\u95dc\u9589\u60a8\u7684\u700f\u89bd\u5668\uff0c\u7136\u5f8c\u518d\u8a66\u4e00\u6b21\u3002\u5982\u679c\u6b64\u932f\u8aa4\u91cd\u8907\u767c\u751f\uff0c\u8acb\u806f\u7d61\u60a8\u7684\u670d\u52d9\u53f0\u3002
 Error_InvalidConfig=\u7d44\u614b\u7121\u6548\u6216\u640d\u6bc0\u3002\u8acb\u4fee\u6b63\u932f\u8aa4\u6216\u79fb\u9664\u7d44\u614b\u6a94\u6848\u3002
 Error_InvalidFormID=\u60a8\u7684\u700f\u89bd\u5668\u5de5\u4f5c\u968e\u6bb5\u7121\u6548\u6216\u5df2\u904e\u671f\u3002\u8acb\u518d\u8a66\u4e00\u6b21\u3002
 Error_TokenMissingContact=\u60a8\u7684\u5e33\u6236\u6c92\u6709\u53ef\u7528\u7684\u806f\u7d61\u8cc7\u8a0a\u3002\u8acb\u806f\u7d61\u60a8\u7684\u7ba1\u7406\u54e1\u3002
@@ -157,6 +157,7 @@ Error_NoProfileAssigned=\u6b64\u4f5c\u696d\u672a\u6307\u6d3e\u8a2d\u5b9a\u6a94\u
 Error_StartupError=\u555f\u52d5\u61c9\u7528\u7a0b\u5f0f\u6642\u767c\u751f\u932f\u8aa4\u3002\u8acb\u67e5\u770b\u8a18\u9304\u6a94\u4ee5\u53d6\u5f97\u8cc7\u8a0a\u3002
 Error_EnvironmentError=\u61c9\u7528\u7a0b\u5f0f\u74b0\u5883\u7684\u932f\u8aa4\u5df2\u9020\u6210\u61c9\u7528\u7a0b\u5f0f\u7121\u6cd5\u555f\u52d5\u3002
 Error_ApplicationNotRunning=\u8acb\u5148\u9650\u5236\u61c9\u7528\u7a0b\u5f0f\u7d44\u614b\uff0c\u624d\u80fd\u4f7f\u7528\u6b64\u529f\u80fd\u3002
+Error_EmailSendFailure=\u50b3\u9001\u96fb\u5b50\u90f5\u4ef6\u9805\u76ee\u6642\u767c\u751f\u932f\u8aa4 %1%\uff0c\u932f\u8aa4\uff1a%2%
 
 Error_RemoteErrorValue=\u9060\u7aef\u932f\u8aa4\uff1a%1%
 
