--- a/src/main/resources/password/pwm/i18n/Message_ca.properties
+++ b/src/main/resources/password/pwm/i18n/Message_ca.properties
@@ -45,6 +45,7 @@ EventLog_HelpdeskVerifyToken=Servei d'assist\u00e8ncia: verificar un testimoni
 EventLog_HelpdeskVerifyTokenIncorrect=Servei d'assist\u00e8ncia: verificar un testimoni incorrecte
 EventLog_HelpdeskVerifyAttributes=Servei d'assist\u00e8ncia: verificar uns atributs
 EventLog_HelpdeskVerifyAttributesIncorrect=Servei d'assist\u00e8ncia: verificar uns atributs incorrectes
+EventLog_IntruderUserAttempt=Intent d'intrusi\u00f3
 EventLog_IntruderUserLock=Bloqueig d'un usuari intr\u00fas
 EventLog_TokenIssued=Testimoni em\u00e8s
 EventLog_TokenClaimed=Testimoni reclamat
@@ -53,12 +54,13 @@ EventLog_RecoverPassword=Recupera una contrasenya oblidada
 EventLog_SetupResponses=Configura les respostes de la contrasenya
 Eventlog_SetupOtpSecret=Configura l'OTP secreta
 EventLog_UpdateProfile=Actualitza els atributs
+EventLog_DeleteAccount=Suprimeix el compte
 Requirement_ADComplexity=Ha de contenir almenys tres dels seg\u00fcents tipus de car\u00e0cters: <ul><li>Maj\u00fascula (A-Z)</li><li>Min\u00fascula (a-z)</li><li>N\u00famero (0-9)</li><li>S\u00edmbol (!, #, $, etc.)</li></ul>
 Requirement_ADComplexity2008=Ha de contenir almenys %1% dels seg\u00fcents tipus de car\u00e0cters: <ul><li>Maj\u00fascula (A-Z)</li><li>Min\u00fascula (a-z)</li><li>N\u00famero (0-9)</li><li>S\u00edmbol (!, #, $, etc.)</li><li>Altres car\u00e0cters de llengua no inclosos m\u00e9s amunt</li></ul>
 Requirement_AllowNumeric=No pot contenir cap car\u00e0cter num\u00e8ric.
 Requirement_AllowSpecial=No pot contenir cap s\u00edmbol (car\u00e0cters no alfanum\u00e8rics).
 Requirement_CaseSensitive=La contrasenya distingeix entre maj\u00fascules i min\u00fascules.
-Requirement_DisAllowedAttributes=No pot contenir part del seu nom ni del nom d'usuari.
+Requirement_DisAllowedAttributes=No pot contenir part del vostre nom ni del nom d'usuari.
 Requirement_DisAllowedValues=No pot contenir cap dels valors seg\u00fcents: %1%
 Requirement_FirstNumeric=El primer car\u00e0cter no pot ser num\u00e8ric.
 Requirement_FirstSpecial=El primer car\u00e0cter no pot ser un s\u00edmbol (car\u00e0cters no alfanum\u00e8rics).
@@ -140,7 +142,7 @@ Rule_MinimumAlpha=M\u00ednim alfa
 Rule_MaximumAlpha=M\u00e0xim alfa
 Rule_MinimumNonAlpha=M\u00ednim no alfa
 Rule_MaximumNonAlpha=M\u00e0xim no alfa
-Rule_EnableWordlist=Habilita la llista de paraules
+Rule_EnableWordlist=Habiliteu la llista de paraules
 Rule_MinimumStrength=M\u00ednim de seguretat
 Rule_MaximumConsecutive=M\u00e0xim de consecutius
 Rule_CharGroupsValues=Valors dels grups de car\u00e0cters
