--- a/src/main/resources/password/pwm/i18n/Message_da.properties
+++ b/src/main/resources/password/pwm/i18n/Message_da.properties
@@ -45,6 +45,7 @@ EventLog_HelpdeskVerifyToken=Support \u2013 Bekr\u00e6ft token
 EventLog_HelpdeskVerifyTokenIncorrect=Support - Bekr\u00e6ftet token er forkert
 EventLog_HelpdeskVerifyAttributes=Support - Bekr\u00e6ft attributter
 EventLog_HelpdeskVerifyAttributesIncorrect=Support - Bekr\u00e6ftede attributter er forkerte
+EventLog_IntruderUserAttempt=Fors\u00f8g p\u00e5 indtr\u00e6ngen
 EventLog_IntruderUserLock=Sp\u00e6rring af ubuden g\u00e6stebruger
 EventLog_TokenIssued=Der er udstedt et token
 EventLog_TokenClaimed=Der er reserveret et token
@@ -53,6 +54,7 @@ EventLog_RecoverPassword=Genopret glemt adgangskode
 EventLog_SetupResponses=Angiv svar for adgangskode
 Eventlog_SetupOtpSecret=Angiv hemmelighed for OTP
 EventLog_UpdateProfile=Opdater attributter
+EventLog_DeleteAccount=Slet konto
 Requirement_ADComplexity=Skal indeholde mindst tre typer af f\u00f8lgende tegn: <ul><li>store bogstaver (A-Z)</li><li>sm\u00e5 bogstaver (a-z)</li><li>tal (0-9)</li><li>symboler (!, #, $, etc.)</li></ul>
 Requirement_ADComplexity2008=Skal indeholde mindst %1% typer af f\u00f8lgende tegn: <ul><li>store bogstaver (A-Z)</li><li>sm\u00e5 bogstaver (a-z)</li><li>tal (0-9)</li><li>symboler (!, #, $, etc.)</li><li>andre sproglige tegn, der ikke er angivet ovenfor</li></ul>
 Requirement_AllowNumeric=M\u00e5 ikke indeholde numeriske tegn.
