--- a/src/main/resources/password/pwm/i18n/Message_de.properties
+++ b/src/main/resources/password/pwm/i18n/Message_de.properties
@@ -45,7 +45,8 @@ EventLog_HelpdeskVerifyToken=Helpdesk - Token \u00fcberpr\u00fcfen
 EventLog_HelpdeskVerifyTokenIncorrect=Helpdesk - falsches Token - \u00fcberpr\u00fcfen
 EventLog_HelpdeskVerifyAttributes=Helpdesk - Attribute \u00fcberpr\u00fcfen
 EventLog_HelpdeskVerifyAttributesIncorrect=Helpdesk - falsche Attribute - \u00fcberpr\u00fcfen
-EventLog_IntruderUserLock=Unbefugter Benutzer - Sperre
+EventLog_IntruderUserAttempt=Versuch eines unbefugten Benutzers
+EventLog_IntruderUserLock=Sperren eines unbefugten Benutzers
 EventLog_TokenIssued=Token ausgestellt
 EventLog_TokenClaimed=Token beansprucht
 EventLog_ClearResponses=Antworten l\u00f6schen
@@ -53,6 +54,7 @@ EventLog_RecoverPassword=Vergessenes Passwort wiederherstellen
 EventLog_SetupResponses=Passwortantworten einrichten
 Eventlog_SetupOtpSecret=OTP-Geheimnis einrichten
 EventLog_UpdateProfile=Attribute aktualisieren
+EventLog_DeleteAccount=Konto l\u00f6schen
 Requirement_ADComplexity=Muss mindestens drei der folgenden Zeichenarten enthalten: <ul><li>Gro\u00dfbuchstaben (A-Z)</li><li>Kleinbuchstaben (a-z)</li><li>Zahlen (0-9)</li><li>Symbole (!, #, $ usw.)</li></ul>
 Requirement_ADComplexity2008=Muss mindestens %1% der folgenden Zeichenarten enthalten: <ul><li>Gro\u00dfbuchstaben (A-Z)</li><li>Kleinbuchstaben (a-z)</li><li>Zahlen (0-9)</li><li>Symbole (!, #, $ usw.)</li><li>Sonstige Sprachzeichen, die nicht oben aufgef\u00fchrt sind</li></ul>
 Requirement_AllowNumeric=Darf kein numerisches Zeichen enthalten.
