--- a/src/main/resources/password/pwm/i18n/Message_es.properties
+++ b/src/main/resources/password/pwm/i18n/Message_es.properties
@@ -43,8 +43,9 @@ EventLog_HelpdeskVerifyOtp=Verificar OTP con el servicio de ayuda t\u00e9cnica
 EventLog_HelpdeskVerifyOtpIncorrect=Verificaci\u00f3n de OTP incorrecta con el servicio de ayuda t\u00e9cnica
 EventLog_HelpdeskVerifyToken=Verificar testigo con el servicio de ayuda t\u00e9cnica
 EventLog_HelpdeskVerifyTokenIncorrect=Verificaci\u00f3n de testigo incorrecto con el servicio de ayuda t\u00e9cnica
-EventLog_HelpdeskVerifyAttributes=Verificaci\u00f3n de atributos con el servicio de ayuda t\u00e9cnica
+EventLog_HelpdeskVerifyAttributes=Verificar atributos con el servicio de ayuda t\u00e9cnica
 EventLog_HelpdeskVerifyAttributesIncorrect=Verificaci\u00f3n de atributos incorrectos con el servicio de ayuda t\u00e9cnica
+EventLog_IntruderUserAttempt=Intento de intrusi\u00f3n de usuario
 EventLog_IntruderUserLock=Bloqueo de usuario intruso
 EventLog_TokenIssued=Se emiti\u00f3 un testigo
 EventLog_TokenClaimed=Se reclam\u00f3 un testigo
@@ -53,12 +54,13 @@ EventLog_RecoverPassword=Recuperar contrase\u00f1a olvidada
 EventLog_SetupResponses=Configurar respuestas de contrase\u00f1a
 Eventlog_SetupOtpSecret=Configurar secreto de contrase\u00f1a para una vez
 EventLog_UpdateProfile=Actualizar atributos
+EventLog_DeleteAccount=Suprimir cuenta
 Requirement_ADComplexity=Debe tener al menos tres tipos de los siguientes caracteres: <ul><li>May\u00fascula (A-Z)</li><li>Min\u00fascula (a-z)</li><li>N\u00famero (0-9)</li><li>S\u00edmbolo (!, #, $, etc.)</li></ul>
 Requirement_ADComplexity2008=Debe tener al menos %1% tipos de los siguientes caracteres: <ul><li>May\u00fascula (A-Z)</li><li>Min\u00fascula (a-z)</li><li>N\u00famero (0-9)</li><li>S\u00edmbolo (!, #, $, etc.)</li><li>Caracteres de otros idiomas no indicados anteriormente</li></ul>
 Requirement_AllowNumeric=No debe incluir ning\u00fan car\u00e1cter num\u00e9rico.
 Requirement_AllowSpecial=No debe incluir ning\u00fan car\u00e1cter de s\u00edmbolo (que no sea letra ni n\u00famero).
 Requirement_CaseSensitive=La contrase\u00f1a distingue entre may\u00fasculas y min\u00fasculas.
-Requirement_DisAllowedAttributes=No debe incluir ninguna parte del nombre de usuario.
+Requirement_DisAllowedAttributes=No debe incluir ninguna parte del nombre o nombre de usuario.
 Requirement_DisAllowedValues=No debe incluir ninguno de los siguientes valores: %1%
 Requirement_FirstNumeric=El primer car\u00e1cter no puede ser num\u00e9rico.
 Requirement_FirstSpecial=El primer car\u00e1cter no puede ser un s\u00edmbolo (que no sea letra ni n\u00famero).
