--- a/src/main/resources/password/pwm/i18n/Message_fr.properties
+++ b/src/main/resources/password/pwm/i18n/Message_fr.properties
@@ -45,6 +45,7 @@ EventLog_HelpdeskVerifyToken=Service d'assistance - V\u00e9rifier le jeton
 EventLog_HelpdeskVerifyTokenIncorrect=Service d'assistance - V\u00e9rifier le jeton incorrect
 EventLog_HelpdeskVerifyAttributes=Service d'assistance - V\u00e9rifier les attributs
 EventLog_HelpdeskVerifyAttributesIncorrect=Service d'assistance - V\u00e9rifier les attributs incorrects
+EventLog_IntruderUserAttempt=Tentative d'intrusion par un utilisateur
 EventLog_IntruderUserLock=Verrouillage de l'utilisateur intrusif
 EventLog_TokenIssued=Jeton \u00e9mis
 EventLog_TokenClaimed=Jeton r\u00e9clam\u00e9
@@ -53,12 +54,13 @@ EventLog_RecoverPassword=R\u00e9cup\u00e9rer un mot de passe oubli\u00e9
 EventLog_SetupResponses=Configurer les r\u00e9ponses concernant le mot de passe
 Eventlog_SetupOtpSecret=Configurer le secret du mot de passe \u00e0 usage unique
 EventLog_UpdateProfile=Mettre \u00e0 jour les attributs
+EventLog_DeleteAccount=Supprimer le compte
 Requirement_ADComplexity=Doit comporter au moins trois types des caract\u00e8res suivants : <ul><li>Majuscule (A-Z)</li><li>Minuscule (a-z)</li><li>Chiffre (0-9)</li><li>Symbole (!, #, $, etc.)</li></ul>
 Requirement_ADComplexity2008=Doit comporter au moins %1% types des caract\u00e8res suivants : <ul><li>Majuscule (A-Z)</li><li>Minuscule (a-z)</li><li>Chiffre (0-9)</li><li>Symbole (!, #, $, etc.)</li><li>Autres caract\u00e8res linguistiques non r\u00e9pertori\u00e9s ci-dessus</li></ul>
 Requirement_AllowNumeric=Ne doit comporter aucun caract\u00e8re num\u00e9rique.
 Requirement_AllowSpecial=Ne doit comporter aucun symbole (ni alphab\u00e9tique ni num\u00e9rique).
 Requirement_CaseSensitive=Le mot de passe est sensible \u00e0 la casse.
-Requirement_DisAllowedAttributes=Ne doit comporter aucune partie de votre nom ou de votre nom d'utilisateur.
+Requirement_DisAllowedAttributes=Ne doit contenir aucune partie de votre nom ou de votre nom d'utilisateur.
 Requirement_DisAllowedValues=Ne doit comporter aucune des valeurs suivantes : %1%
 Requirement_FirstNumeric=Le premier caract\u00e8re ne peut pas \u00eatre num\u00e9rique.
 Requirement_FirstSpecial=Le premier caract\u00e8re ne peut pas \u00eatre un symbole (ni alphab\u00e9tique ni num\u00e9rique).
