--- a/src/main/resources/password/pwm/i18n/Message_it.properties
+++ b/src/main/resources/password/pwm/i18n/Message_it.properties
@@ -33,18 +33,19 @@ EventLog_ChangePassword=Modifica password
 EventLog_UnlockPassword=Sblocca password
 EventLog_CreateUser=Crea account
 EventLog_HelpdeskAction=Azione help desk
-EventLog_HelpdeskClearResponses=Elimina risposte help desk
-EventLog_HelpdeskClearOtpSecret=Elimina segreto OTP help desk
-EventLog_HelpdeskSetPassword=Imposta password help desk
-EventLog_HelpdeskUnlockPassword=Sblocca password help desk
-EventLog_HelpdeskDeleteUser=Cancella utente help desk
-EventLog_HelpdeskViewDetail=Visualizza dettagli help desk
-EventLog_HelpdeskVerifyOtp=Verifica OTP help desk
-EventLog_HelpdeskVerifyOtpIncorrect=Verifica OTP errata help desk
-EventLog_HelpdeskVerifyToken=Verifica token help desk
-EventLog_HelpdeskVerifyTokenIncorrect=Verifica token errato help desk
-EventLog_HelpdeskVerifyAttributes=Verifica attributi help desk
-EventLog_HelpdeskVerifyAttributesIncorrect=Verifica attributi errati help desk
+EventLog_HelpdeskClearResponses=Help desk - Eliminazione risposte
+EventLog_HelpdeskClearOtpSecret=Help desk - Eliminazione segreto OTP
+EventLog_HelpdeskSetPassword=Help desk - Impostazione password
+EventLog_HelpdeskUnlockPassword=Help desk - Sblocco password
+EventLog_HelpdeskDeleteUser=Help desk - Cancellazione utente
+EventLog_HelpdeskViewDetail=Help desk - Visualizzazione dettagli
+EventLog_HelpdeskVerifyOtp=Help desk - Verifica OTP
+EventLog_HelpdeskVerifyOtpIncorrect=Help desk - Verifica OTP errata
+EventLog_HelpdeskVerifyToken=Help desk - Verifica token
+EventLog_HelpdeskVerifyTokenIncorrect=Help desk - Verifica token errato
+EventLog_HelpdeskVerifyAttributes=Help desk - Verifica attributi
+EventLog_HelpdeskVerifyAttributesIncorrect=Help desk - Verifica attributi errati
+EventLog_IntruderUserAttempt=Tentativo di intrusione utente
 EventLog_IntruderUserLock=Blocco utente intruso
 EventLog_TokenIssued=Token emesso
 EventLog_TokenClaimed=Token richiesto
@@ -53,6 +54,7 @@ EventLog_RecoverPassword=Recupera password dimenticata
 EventLog_SetupResponses=Imposta risposte di autenticazione
 Eventlog_SetupOtpSecret=Imposta segreto OTP
 EventLog_UpdateProfile=Aggiorna attributi
+EventLog_DeleteAccount=Cancella account
 Requirement_ADComplexity=Deve includere almeno tre dei seguenti tipi di carattere:<ul><li>maiuscola (A-Z)</li><li>minuscola (a-z)</li><li>numero (0-9)</li><li>simbolo (!, #, $, ecc.)</li></ul>
 Requirement_ADComplexity2008=Deve includere almeno %1% dei seguenti tipi di carattere:<ul><li>maiuscola (A-Z)</li><li>minuscola (a-z)</li><li>numero (0-9)</li><li>simbolo (!, #, $, ecc.)</li><li>caratteri di altre lingue non elencati sopra</li></ul>
 Requirement_AllowNumeric=Non deve includere alcun carattere numerico.
