--- a/src/main/resources/password/pwm/i18n/Message_ja.properties
+++ b/src/main/resources/password/pwm/i18n/Message_ja.properties
@@ -32,11 +32,11 @@ EventLog_AgreementPassed=\u5951\u7d04\u627f\u8a8d\u6e08\u307f
 EventLog_ChangePassword=\u30d1\u30b9\u30ef\u30fc\u30c9\u5909\u66f4
 EventLog_UnlockPassword=\u30d1\u30b9\u30ef\u30fc\u30c9\u306e\u30ed\u30c3\u30af\u89e3\u9664
 EventLog_CreateUser=\u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u4f5c\u6210
-EventLog_HelpdeskAction=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u30a2\u30af\u30b7\u30e7\u30f3
+EventLog_HelpdeskAction=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u3088\u308b\u30a2\u30af\u30b7\u30e7\u30f3
 EventLog_HelpdeskClearResponses=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u3088\u308b\u56de\u7b54\u306e\u30af\u30ea\u30a2
 EventLog_HelpdeskClearOtpSecret=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u3088\u308bOTP\u30b7\u30fc\u30af\u30ec\u30c3\u30c8\u306e\u30af\u30ea\u30a2
 EventLog_HelpdeskSetPassword=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u3088\u308b\u30d1\u30b9\u30ef\u30fc\u30c9\u306e\u8a2d\u5b9a
-EventLog_HelpdeskUnlockPassword=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u3088\u308b\u30d1\u30b9\u30ef\u30fc\u30c9\u30ed\u30c3\u30af\u89e3\u9664
+EventLog_HelpdeskUnlockPassword=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u3088\u308b\u30d1\u30b9\u30ef\u30fc\u30c9\u306e\u30ed\u30c3\u30af\u89e3\u9664
 EventLog_HelpdeskDeleteUser=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u3088\u308b\u30e6\u30fc\u30b6\u306e\u524a\u9664
 EventLog_HelpdeskViewDetail=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u3088\u308b\u8a73\u7d30\u8868\u793a
 EventLog_HelpdeskVerifyOtp=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u3088\u308bOTP\u691c\u8a3c
@@ -45,6 +45,7 @@ EventLog_HelpdeskVerifyToken=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u3088\u3
 EventLog_HelpdeskVerifyTokenIncorrect=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u3088\u308b\u4e0d\u6b63\u30c8\u30fc\u30af\u30f3\u691c\u8a3c
 EventLog_HelpdeskVerifyAttributes=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u3088\u308b\u5c5e\u6027\u691c\u8a3c
 EventLog_HelpdeskVerifyAttributesIncorrect=\u30d8\u30eb\u30d7\u30c7\u30b9\u30af\u306b\u3088\u308b\u4e0d\u6b63\u5c5e\u6027\u691c\u8a3c
+EventLog_IntruderUserAttempt=\u4e0d\u6b63\u4fb5\u5165\u30e6\u30fc\u30b6\u306b\u3088\u308b\u8a66\u884c
 EventLog_IntruderUserLock=\u4e0d\u6b63\u4fb5\u5165\u30e6\u30fc\u30b6\u30ed\u30c3\u30af\u30a2\u30a6\u30c8
 EventLog_TokenIssued=\u30c8\u30fc\u30af\u30f3\u304c\u767a\u884c\u3055\u308c\u307e\u3057\u305f
 EventLog_TokenClaimed=\u30c8\u30fc\u30af\u30f3\u304c\u8981\u6c42\u3055\u308c\u307e\u3057\u305f
@@ -53,6 +54,7 @@ EventLog_RecoverPassword=\u5fd8\u308c\u305f\u30d1\u30b9\u30ef\u30fc\u30c9\u306e\
 EventLog_SetupResponses=\u30d1\u30b9\u30ef\u30fc\u30c9\u56de\u7b54\u306e\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7
 Eventlog_SetupOtpSecret=OTP\u30b7\u30fc\u30af\u30ec\u30c3\u30c8\u306e\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7
 EventLog_UpdateProfile=\u5c5e\u6027\u306e\u66f4\u65b0
+EventLog_DeleteAccount=\u30a2\u30ab\u30a6\u30f3\u30c8\u306e\u524a\u9664
 Requirement_ADComplexity=\u6b21\u306e\u6587\u5b57\u306e\u3046\u3061\u5c11\u306a\u304f\u3068\u30823\u7a2e\u985e\u3092\u4f7f\u7528\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059: <ul><li>\u5927\u6587\u5b57(A\uff5eZ)</li><li>\u5c0f\u6587\u5b57(a\uff5ez)</li><li>\u6570\u5b57(0\uff5e9)</li><li>\u8a18\u53f7(!\u3001 #\u3001$\u306a\u3069)</li></ul>
 Requirement_ADComplexity2008=\u6b21\u306e\u6587\u5b57\u306e\u3046\u3061\u5c11\u306a\u304f\u3068\u3082 %1% \u7a2e\u985e\u3092\u4f7f\u7528\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059: <ul><li>\u5927\u6587\u5b57(A\uff5eZ)</li><li>\u5c0f\u6587\u5b57(a\uff5ez)</li><li>\u6570\u5b57(0\uff5e9)</li><li>\u8a18\u53f7(!\u3001 #\u3001$\u306a\u3069)</li><li>\u4e0a\u8a18\u4ee5\u5916\u306e\u8a00\u8a9e\u6587\u5b57</li></ul>
 Requirement_AllowNumeric=\u6570\u5b57\u3092\u542b\u3081\u306a\u3044\u3067\u304f\u3060\u3055\u3044\u3002
