--- a/src/main/resources/password/pwm/i18n/Message_nl.properties
+++ b/src/main/resources/password/pwm/i18n/Message_nl.properties
@@ -45,6 +45,7 @@ EventLog_HelpdeskVerifyToken=Helpdesk: token verifi\u00ebren
 EventLog_HelpdeskVerifyTokenIncorrect=Helpdesk: verificatie mislukt vanwege onjuist token
 EventLog_HelpdeskVerifyAttributes=Helpdesk: attributen verifi\u00ebren
 EventLog_HelpdeskVerifyAttributesIncorrect=Helpdesk: onjuiste attributen verifi\u00ebren
+EventLog_IntruderUserAttempt=Poging tot indringen
 EventLog_IntruderUserLock=Uitsluiten van indringer
 EventLog_TokenIssued=Token uitgegeven
 EventLog_TokenClaimed=Token geclaimd
@@ -53,6 +54,7 @@ EventLog_RecoverPassword=Vergeten wachtwoord herstellen
 EventLog_SetupResponses=Wachtwoordantwoorden instellen
 Eventlog_SetupOtpSecret=OTP-geheim instellen
 EventLog_UpdateProfile=Attributen bijwerken
+EventLog_DeleteAccount=Account verwijderen
 Requirement_ADComplexity=Moet minimaal drie typen tekens (naar keuze) bevatten: <ul><li>hoofdletters (A-Z)</li><li>kleine letters (a-z)</li><li>cijfers (0-9)</li><li>speciale tekens (!, #, $, enzovoort)</li></ul>
 Requirement_ADComplexity2008=Moet minimaal %1% typen tekens (naar keuze) bevatten: <ul><li>hoofdletters (A-Z)</li><li>kleine letters (a-z)</li><li>cijfers (0-9)</li><li>speciale tekens (!, #, $, enzovoort)</li><li>Tekens van andere talen worden hierboven niet weergegeven</li></ul>
 Requirement_AllowNumeric=Mag geen enkel numeriek teken bevatten.
