--- a/src/main/resources/password/pwm/i18n/Message_pl.properties
+++ b/src/main/resources/password/pwm/i18n/Message_pl.properties
@@ -45,6 +45,7 @@ EventLog_HelpdeskVerifyToken=Pomoc techniczna \u2014 weryfikacja tokenu
 EventLog_HelpdeskVerifyTokenIncorrect=Pomoc techniczna \u2014 niepowodzenie weryfikacji z powodu niepoprawnego tokenu
 EventLog_HelpdeskVerifyAttributes=Pomoc techniczna \u2014 weryfikacja atrybut\u00f3w
 EventLog_HelpdeskVerifyAttributesIncorrect=Pomoc techniczna \u2014 niepowodzenie weryfikacji z powodu niepoprawnych atrybut\u00f3w
+EventLog_IntruderUserAttempt=Pr\u00f3ba wtargni\u0119cia
 EventLog_IntruderUserLock=Zablokowanie wtargni\u0119cia
 EventLog_TokenIssued=Wystawienie tokenu
 EventLog_TokenClaimed=Przyj\u0119cie tokenu
@@ -53,6 +54,7 @@ EventLog_RecoverPassword=Odzyskanie zapomnianego has\u0142a
 EventLog_SetupResponses=Skonfigurowanie odpowiedzi do has\u0142a
 Eventlog_SetupOtpSecret=Skonfigurowanie klucza tajnego has\u0142a jednorazowego
 EventLog_UpdateProfile=Aktualizacja atrybut\u00f3w
+EventLog_DeleteAccount=Usuni\u0119cie konta
 Requirement_ADComplexity=Musi mie\u0107 co najmniej trzy typy nast\u0119puj\u0105cych znak\u00f3w: <ul><li>Wielka litera (A\u2013Z)</ li><li>Ma\u0142a litera (a\u2013z)</ li>Cyfra <li>(0\u20139)</ li>< li>Symbol (!, #, $ itp.)</ li></ ul>
 Requirement_ADComplexity2008=Musi mie\u0107 co najmniej %1% typ. nast\u0119puj\u0105cych znak\u00f3w: <ul><li> Wielka litera (A\u2013Z)</ li><li>Ma\u0142a litera (a\u2013z) </ li>Cyfra<li> (0\u20139)</ li>< li>Symbol (!, #, $ itp.)</li><li>Inne znaki j\u0119zykowe niewymienione powy\u017cej</li></ul>
 Requirement_AllowNumeric=Nie mo\u017ce zawiera\u0107 \u017cadnych cyfr.
