--- a/src/main/resources/password/pwm/i18n/Message_pt_BR.properties
+++ b/src/main/resources/password/pwm/i18n/Message_pt_BR.properties
@@ -38,13 +38,14 @@ EventLog_HelpdeskClearOtpSecret=Limpeza de Segredo OTP pelo Suporte T\u00e9cnico
 EventLog_HelpdeskSetPassword=Defini\u00e7\u00e3o de Senha pelo Suporte T\u00e9cnico
 EventLog_HelpdeskUnlockPassword=Desbloqueio de Senha pelo Suporte T\u00e9cnico
 EventLog_HelpdeskDeleteUser=Apagamento do Usu\u00e1rio pelo Suporte T\u00e9cnico
-EventLog_HelpdeskViewDetail=Detalhes de Exibi\u00e7\u00e3o pelo Suporte T\u00e9cnico
+EventLog_HelpdeskViewDetail=Exibi\u00e7\u00e3o de Detalhes pelo Suporte T\u00e9cnico
 EventLog_HelpdeskVerifyOtp=Verifica\u00e7\u00e3o de OTP pelo Suporte T\u00e9cnico
-EventLog_HelpdeskVerifyOtpIncorrect=Verifica\u00e7\u00e3o de OTP pelo Suporte T\u00e9cnico Incorreta
+EventLog_HelpdeskVerifyOtpIncorrect=Verifica\u00e7\u00e3o de OTP Incorreta pelo Suporte T\u00e9cnico
 EventLog_HelpdeskVerifyToken=Verifica\u00e7\u00e3o de Token pelo Suporte T\u00e9cnico
-EventLog_HelpdeskVerifyTokenIncorrect=Verifica\u00e7\u00e3o de Token pelo Suporte T\u00e9cnico Incorreta
+EventLog_HelpdeskVerifyTokenIncorrect=Verifica\u00e7\u00e3o de Token Incorreto pelo Suporte T\u00e9cnico
 EventLog_HelpdeskVerifyAttributes=Verifica\u00e7\u00e3o de Atributos pelo Suporte T\u00e9cnico
-EventLog_HelpdeskVerifyAttributesIncorrect=Verifica\u00e7\u00e3o de Atributos pelo Suporte T\u00e9cnico Incorreta
+EventLog_HelpdeskVerifyAttributesIncorrect=Verifica\u00e7\u00e3o de Atributos Incorretos pelo Suporte T\u00e9cnico
+EventLog_IntruderUserAttempt=Tentativa de Usu\u00e1rio Intruso
 EventLog_IntruderUserLock=Bloqueio de Usu\u00e1rio Intruso
 EventLog_TokenIssued=Token Emitido
 EventLog_TokenClaimed=Token Requerido
@@ -53,6 +54,7 @@ EventLog_RecoverPassword=Recuperar Senha Esquecida
 EventLog_SetupResponses=Configurar Respostas da Senha
 Eventlog_SetupOtpSecret=Configurar Segredo OTP
 EventLog_UpdateProfile=Atualizar Atributos
+EventLog_DeleteAccount=Apagar Conta
 Requirement_ADComplexity=Deve ter no m\u00ednimo tr\u00eas tipos dos seguintes caracteres: <ul><li>Mai\u00fascula (A-Z)</li><li>Min\u00fascula (a-z)</li><li>N\u00famero (0-9)</li><li>S\u00edmbolo (!, #, $, etc.)</li></ul>
 Requirement_ADComplexity2008=Deve ter no m\u00ednimo %1% tipos dos seguintes caracteres: <ul><li>Mai\u00fascula (A-Z)</li><li>Min\u00fascula (a-z)</li><li>N\u00famero (0-9)</li><li>S\u00edmbolo (!, #, $, etc.)</li><li>Outros caracteres de idioma n\u00e3o listados acima</li></ul>
 Requirement_AllowNumeric=N\u00e3o deve incluir caracteres num\u00e9ricos.
