--- a/src/main/resources/password/pwm/i18n/Message_sv.properties
+++ b/src/main/resources/password/pwm/i18n/Message_sv.properties
@@ -34,17 +34,18 @@ EventLog_UnlockPassword=L\u00e5s upp l\u00f6senordet
 EventLog_CreateUser=Skapa konto
 EventLog_HelpdeskAction=\u00c5tg\u00e4rd fr\u00e5n supportavdelningen
 EventLog_HelpdeskClearResponses=Supportavdelningen rensar svar
-EventLog_HelpdeskClearOtpSecret=Supportavdelningen rensar secret f\u00f6r eng\u00e5ngsl\u00f6senord
+EventLog_HelpdeskClearOtpSecret=Supportavdelningen rensar secret f\u00f6r OTP
 EventLog_HelpdeskSetPassword=Supportavdelningen anger l\u00f6senord
 EventLog_HelpdeskUnlockPassword=Supportavdelningen l\u00e5ser upp l\u00f6senord
 EventLog_HelpdeskDeleteUser=Supportavdelningen tar bort anv\u00e4ndare
 EventLog_HelpdeskViewDetail=Supportavdelningen visar information
-EventLog_HelpdeskVerifyOtp=Supportverifiering \u2013 eng\u00e5ngsl\u00f6senord
-EventLog_HelpdeskVerifyOtpIncorrect=Supportverifiering \u2013 felaktigt eng\u00e5ngsl\u00f6senord
-EventLog_HelpdeskVerifyToken=Supportverifiering \u2013 token
-EventLog_HelpdeskVerifyTokenIncorrect=Supportverifiering \u2013 felaktig token
-EventLog_HelpdeskVerifyAttributes=Supportverifiering \u2013 attribut
-EventLog_HelpdeskVerifyAttributesIncorrect=Supportverifiering \u2013 felaktiga attribut
+EventLog_HelpdeskVerifyOtp=Supportavdelningen verifierar OTP
+EventLog_HelpdeskVerifyOtpIncorrect=Supportavdelningen verifierar felaktigt OTP
+EventLog_HelpdeskVerifyToken=Supportavdelningen verifierar token
+EventLog_HelpdeskVerifyTokenIncorrect=Supportavdelningen verifierar felaktig token
+EventLog_HelpdeskVerifyAttributes=Supportavdelningen verifierar attribut
+EventLog_HelpdeskVerifyAttributesIncorrect=Supportavdelningen verifierar felaktiga attribut
+EventLog_IntruderUserAttempt=Intr\u00e5ngsf\u00f6rs\u00f6k fr\u00e5n anv\u00e4ndare
 EventLog_IntruderUserLock=Utest\u00e4ngning av st\u00f6rande anv\u00e4ndare
 EventLog_TokenIssued=Token utf\u00e4rdad
 EventLog_TokenClaimed=Token inl\u00f6st
@@ -53,6 +54,7 @@ EventLog_RecoverPassword=\u00c5terst\u00e4ll gl\u00f6mt l\u00f6senord
 EventLog_SetupResponses=Ange l\u00f6senordssvar
 Eventlog_SetupOtpSecret=Ange secret f\u00f6r eng\u00e5ngsl\u00f6senord
 EventLog_UpdateProfile=Uppdatera attribut
+EventLog_DeleteAccount=Ta bort konto
 Requirement_ADComplexity=M\u00e5ste ha minst tre av f\u00f6ljande teckentyper: <ul><li>Versaler (A-Z)</li><li>Gemener (a-z)</li><li>Siffror (0-9)</li><li>Symboler (!, #, $ osv.)</li></ul>
 Requirement_ADComplexity2008=M\u00e5ste ha minst %1% av f\u00f6ljande teckentyper: <ul><li>Versaler (A-Z)</li><li>Gemener (a-z)</li><li>Siffror (0-9)</li><li>Symboler (!, #, $ osv.)</li><li>\u00d6vriga spr\u00e5ktecken som inte listas ovan</li></ul>
 Requirement_AllowNumeric=F\u00e5r inte inneh\u00e5lla siffror.
