--- a/src/main/resources/password/pwm/i18n/Message_zh_CN.properties
+++ b/src/main/resources/password/pwm/i18n/Message_zh_CN.properties
@@ -32,20 +32,21 @@ EventLog_AgreementPassed=\u534f\u8bae\u5df2\u901a\u8fc7
 EventLog_ChangePassword=\u66f4\u6539\u53e3\u4ee4
 EventLog_UnlockPassword=\u89e3\u9664\u9501\u5b9a\u53e3\u4ee4
 EventLog_CreateUser=\u521b\u5efa\u5e10\u6237
-EventLog_HelpdeskAction=\u54a8\u8be2\u53f0\u64cd\u4f5c
-EventLog_HelpdeskClearResponses=\u54a8\u8be2\u53f0\u6e05\u9664\u56de\u7b54
-EventLog_HelpdeskClearOtpSecret=\u54a8\u8be2\u53f0\u6e05\u9664 OTP \u673a\u5bc6
-EventLog_HelpdeskSetPassword=\u54a8\u8be2\u53f0\u8bbe\u7f6e\u53e3\u4ee4
-EventLog_HelpdeskUnlockPassword=\u54a8\u8be2\u53f0\u89e3\u9664\u9501\u5b9a\u53e3\u4ee4
-EventLog_HelpdeskDeleteUser=\u54a8\u8be2\u53f0\u5220\u9664\u7528\u6237
-EventLog_HelpdeskViewDetail=\u54a8\u8be2\u53f0\u67e5\u770b\u7ec6\u8282
-EventLog_HelpdeskVerifyOtp=\u54a8\u8be2\u53f0\u6821\u9a8c OTP
-EventLog_HelpdeskVerifyOtpIncorrect=\u54a8\u8be2\u53f0\u4e0d\u6b63\u786e\u7684 OTP \u6821\u9a8c
-EventLog_HelpdeskVerifyToken=\u54a8\u8be2\u53f0\u6821\u9a8c\u4ee4\u724c
-EventLog_HelpdeskVerifyTokenIncorrect=\u54a8\u8be2\u53f0\u4e0d\u6b63\u786e\u7684\u4ee4\u724c\u6821\u9a8c
-EventLog_HelpdeskVerifyAttributes=\u54a8\u8be2\u53f0\u6821\u9a8c\u5c5e\u6027
-EventLog_HelpdeskVerifyAttributesIncorrect=\u54a8\u8be2\u53f0\u4e0d\u6b63\u786e\u7684\u5c5e\u6027\u6821\u9a8c
-EventLog_IntruderUserLock=\u5165\u4fb5\u7528\u6237\u9501\u5b9a
+EventLog_HelpdeskAction=\u54a8\u8be2\u53f0 - \u64cd\u4f5c
+EventLog_HelpdeskClearResponses=\u54a8\u8be2\u53f0 - \u6e05\u9664\u56de\u7b54
+EventLog_HelpdeskClearOtpSecret=\u54a8\u8be2\u53f0 - \u6e05\u9664 OTP \u673a\u5bc6
+EventLog_HelpdeskSetPassword=\u54a8\u8be2\u53f0 - \u8bbe\u7f6e\u53e3\u4ee4
+EventLog_HelpdeskUnlockPassword=\u54a8\u8be2\u53f0 - \u89e3\u9664\u9501\u5b9a\u53e3\u4ee4
+EventLog_HelpdeskDeleteUser=\u54a8\u8be2\u53f0 - \u5220\u9664\u7528\u6237
+EventLog_HelpdeskViewDetail=\u54a8\u8be2\u53f0 - \u67e5\u770b\u7ec6\u8282
+EventLog_HelpdeskVerifyOtp=\u54a8\u8be2\u53f0 - \u6821\u9a8c OTP
+EventLog_HelpdeskVerifyOtpIncorrect=\u54a8\u8be2\u53f0 - \u4e0d\u6b63\u786e\u7684 OTP \u6821\u9a8c
+EventLog_HelpdeskVerifyToken=\u54a8\u8be2\u53f0 - \u6821\u9a8c\u4ee4\u724c
+EventLog_HelpdeskVerifyTokenIncorrect=\u54a8\u8be2\u53f0 - \u4e0d\u6b63\u786e\u7684\u4ee4\u724c\u6821\u9a8c
+EventLog_HelpdeskVerifyAttributes=\u54a8\u8be2\u53f0 - \u6821\u9a8c\u5c5e\u6027
+EventLog_HelpdeskVerifyAttributesIncorrect=\u54a8\u8be2\u53f0 - \u4e0d\u6b63\u786e\u7684\u5c5e\u6027\u6821\u9a8c
+EventLog_IntruderUserAttempt=\u5165\u4fb5\u8005\u7528\u6237\u5c1d\u8bd5
+EventLog_IntruderUserLock=\u5165\u4fb5\u8005\u7528\u6237\u9501\u5b9a
 EventLog_TokenIssued=\u5df2\u9881\u53d1\u7684\u4ee4\u724c
 EventLog_TokenClaimed=\u5df2\u58f0\u660e\u7684\u4ee4\u724c
 EventLog_ClearResponses=\u6e05\u9664\u56de\u7b54
@@ -53,6 +54,7 @@ EventLog_RecoverPassword=\u6062\u590d\u5fd8\u8bb0\u7684\u53e3\u4ee4
 EventLog_SetupResponses=\u8bbe\u7f6e\u53e3\u4ee4\u5e94\u7b54
 Eventlog_SetupOtpSecret=\u8bbe\u7f6e OTP \u673a\u5bc6
 EventLog_UpdateProfile=\u66f4\u65b0\u5c5e\u6027
+EventLog_DeleteAccount=\u5220\u9664\u5e10\u6237
 Requirement_ADComplexity=\u5fc5\u987b\u6709\u81f3\u5c11\u4e09\u79cd\u7c7b\u578b\u7684\u4e0b\u5217\u5b57\u7b26\uff1a<ul> <li>\u5927\u5199\u5b57\u6bcd (A-Z)</li> <li>\u5c0f\u5199\u5b57\u6bcd (a-z)</ li> <li>\u6570\u5b57 (0-9)</ li><li>\u7b26\u53f7\uff08\uff01\u3001\uff03\u3001$ \u7b49\uff09</li></ul>
 Requirement_ADComplexity2008=\u5fc5\u987b\u81f3\u5c11\u5305\u542b\u4ee5\u4e0b %1% \u79cd\u5b57\u7b26\uff1a<ul><li>\u5927\u5199 (A-Z)</li><li>\u5c0f\u5199 (a-z)</li><li>\u6570\u5b57 (0-9)</li><li>\u7b26\u53f7\uff08!\u3001#\u3001$ \u7b49\uff09</li><li>\u4e0a\u9762\u672a\u5217\u7684\u5176\u4ed6\u8bed\u8a00\u5b57\u7b26</li></ul>
 Requirement_AllowNumeric=\u4e0d\u5f97\u5305\u62ec\u4efb\u4f55\u6570\u5b57\u5b57\u7b26\u3002
@@ -140,7 +142,7 @@ Rule_MinimumAlpha=Alpha \u5b57\u7b26\u6700\u5c0f\u6570\u76ee
 Rule_MaximumAlpha=Alpha \u5b57\u7b26\u6700\u5927\u6570\u76ee
 Rule_MinimumNonAlpha=\u975e Alpha \u5b57\u7b26\u6700\u5c0f\u6570\u76ee
 Rule_MaximumNonAlpha=\u975e Alpha \u5b57\u7b26\u6700\u5927\u6570\u76ee
-Rule_EnableWordlist=\u542f\u7528\u8bcd\u6c47\u8868
+Rule_EnableWordlist=\u542f\u7528\u5355\u8bcd\u5217\u8868
 Rule_MinimumStrength=\u6700\u5c0f\u5f3a\u5ea6
 Rule_MaximumConsecutive=\u8fde\u7eed\u5b57\u7b26\u6700\u5927\u6570\u76ee
 Rule_CharGroupsValues=\u5b57\u7b26\u7ec4\u503c
