--- a/src/main/resources/password/pwm/i18n/Message_zh_TW.properties
+++ b/src/main/resources/password/pwm/i18n/Message_zh_TW.properties
@@ -45,6 +45,7 @@ EventLog_HelpdeskVerifyToken=\u670d\u52d9\u53f0\u9a57\u8b49\u8a18\u865f
 EventLog_HelpdeskVerifyTokenIncorrect=\u670d\u52d9\u53f0\u4e0d\u6b63\u78ba\u7684\u8a18\u865f\u9a57\u8b49
 EventLog_HelpdeskVerifyAttributes=\u670d\u52d9\u53f0\u9a57\u8b49\u5c6c\u6027
 EventLog_HelpdeskVerifyAttributesIncorrect=\u670d\u52d9\u53f0\u4e0d\u6b63\u78ba\u7684\u5c6c\u6027\u9a57\u8b49
+EventLog_IntruderUserAttempt=\u4fb5\u5165\u8005\u4f7f\u7528\u8005\u5617\u8a66
 EventLog_IntruderUserLock=\u4fb5\u5165\u8005\u4f7f\u7528\u8005\u9396\u5b9a
 EventLog_TokenIssued=\u5df2\u7c3d\u767c\u7684\u8a18\u865f
 EventLog_TokenClaimed=\u5df2\u8981\u6c42\u7684\u8a18\u865f
@@ -53,6 +54,7 @@ EventLog_RecoverPassword=\u5fa9\u539f\u5fd8\u8a18\u5bc6\u78bc
 EventLog_SetupResponses=\u8a2d\u5b9a\u5bc6\u78bc\u56de\u61c9
 Eventlog_SetupOtpSecret=\u8a2d\u5b9a OTP \u79d8\u5bc6
 EventLog_UpdateProfile=\u66f4\u65b0\u5c6c\u6027
+EventLog_DeleteAccount=\u522a\u9664\u5e33\u6236
 Requirement_ADComplexity=\u5fc5\u9808\u5305\u542b\u81f3\u5c11\u4e0b\u5217\u4e09\u7a2e\u5b57\u5143\uff1a<ul><li>\u5927\u5beb (A-Z)</li><li>\u5c0f\u5beb (a-z)</li><li>\u6578\u5b57 (0-9)</li><li>\u7b26\u865f (!\u3001#\u3001$ \u7b49)</li></ul>
 Requirement_ADComplexity2008=\u5fc5\u9808\u5305\u542b\u81f3\u5c11\u4e0b\u5217 %1% \u7a2e\u5b57\u5143\uff1a<ul><li>\u5927\u5beb (A-Z)</li><li>\u5c0f\u5beb (a-z)</li><li>\u6578\u5b57 (0-9)</li><li>\u7b26\u865f (!\u3001#\u3001$ \u7b49)</li></ul>\u4e0a\u65b9\u672a\u5217\u51fa\u7684\u5176\u4ed6\u8a9e\u8a00\u5b57\u5143</li></ul>
 Requirement_AllowNumeric=\u4e0d\u53ef\u5305\u542b\u4efb\u4f55\u6578\u5b57\u5b57\u5143\u3002
