--- a/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
+++ b/src/main/resources/password/pwm/i18n/Display_pt_BR.properties
@@ -1,4 +1,4 @@
-#Mon, 04 Apr 2016 05:53:55 -0400
+#Tue, 08 Nov 2016 18:41:50 -0500
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -81,6 +81,7 @@ Display_CommunicationError=N\u00e3o \u00e9 poss\u00edvel comunicar-se com o serv
 Display_ConfirmResponses=Certifique-se de que as respostas e as perguntas estejam corretas. Verifique a ortografia e a pontua\u00e7\u00e3o. Se esquecer a senha, voc\u00ea poder\u00e1 acessar a conta respondendo \u00e0s perguntas de seguran\u00e7a.
 Display_Day=dia
 Display_Days=dias
+Display_DeleteUserConfirm=Tem certeza de que deseja apagar sua conta? Isso n\u00e3o poder\u00e1 ser desfeito.
 Display_ErrorBody=Ocorreu um erro. Feche o browser e tente novamente mais tarde. Se esse erro se repetir, contate o suporte t\u00e9cnico.
 Display_ErrorReference=refer\u00eancia de erro %1%
 Display_ExpirationDate=Data de vencimento da conta (m\u00e1ximo de %1% dias)
@@ -94,13 +95,14 @@ Display_HelpdeskOtpValidation=Instrua o usu\u00e1rio a carregar o aplicativo de 
 Display_Hour=hora
 Display_Hours=horas
 Display_IdleTimeout=Tempo de Espera de Inatividade\:
-Display_IdleWarningMessage=A sess\u00e3o do browser est\u00e1 prestes a atingir o limite de tempo de espera. Clique em qualquer lugar na p\u00e1gina para continuar.
+Display_IdleWarningMessage=A sess\u00e3o est\u00e1 prestes a atingir o limite de tempo de espera. Clique em qualquer lugar na p\u00e1gina para continuar.
 Display_IdleWarningTitle=Tempo de Espera de Inatividade
 Display_JavascriptRequired=Javascript necess\u00e1rio para ver esta p\u00e1gina.
 Display_LeaveDirtyPasswordPage=Se voc\u00ea sair desta p\u00e1gina, a senha n\u00e3o ser\u00e1 mudada.
 Display_Login=
 Display_LoginPasswordOnly=Digite sua senha abaixo. A senha atual \u00e9 necess\u00e1ria para acessar esse aplicativo.
-Display_Logout=<b>Agora voc\u00ea saiu.</b><p/>Feche todas as janelas do browser da Internet antes de tentar entrar novamente.
+Display_Logout=Agora, voc\u00ea est\u00e1 desconectado.
+Display_LogoutPublic=Sua sess\u00e3o atingiu o tempo de espera devido \u00e0 inatividade.
 Display_Minute=minuto
 Display_Minutes=minutos
 Display_NAAF_PASSWORD=Forne\u00e7a a senha de autentica\u00e7\u00e3o NAAF.
@@ -129,7 +131,7 @@ Display_PleaseWait=Carregando...
 Display_PleaseWaitNewUser=Sua nova conta est\u00e1 sendo configurada. Esse processo pode levar v\u00e1rios minutos, seja paciente.
 Display_PleaseWaitPassword=A senha est\u00e1 sendo mudada. Esse processo pode levar v\u00e1rios minutos, seja paciente.
 Display_Random=Aleat\u00f3rio
-Display_RecoverVerificationChoice=Selecione um dos m\u00e9todos a seguir para verificar sua identidade.
+Display_RecoverVerificationChoice=Selecione um dos m\u00e9todos a seguir para verificar sua identidade. Nota\: Se o seu administrador requerer v\u00e1rias formas de verifica\u00e7\u00e3o, voc\u00ea ser\u00e1 redirecionado de volta para esta p\u00e1gina at\u00e9 que todos os crit\u00e9rios de verifica\u00e7\u00e3o sejam atendidos.
 Display_RecoverTokenSendChoices=Voc\u00ea receber\u00e1 um c\u00f3digo de seguran\u00e7a para que possa confirmar sua identidade. Escolha o m\u00e9todo pelo qual gostaria de receber seu c\u00f3digo de seguran\u00e7a.
 Display_RecoverTokenSendChoiceEmail=Enviar o c\u00f3digo para seu endere\u00e7o de e-mail registrado.
 Display_RecoverTokenSendChoiceSMS=Enviar o c\u00f3digo para seu telefone celular usando mensagem de texto (SMS).
@@ -152,7 +154,7 @@ Display_SetRandomPasswordPrompt=Definir uma nova senha aleat\u00f3ria para este 
 Display_SearchResultsNone=Nenhum resultado.
 Display_Second=segundo
 Display_Seconds=segundos
-Display_SetupHelpdeskResponses=<p>O administrador precisa que voc\u00ea forne\u00e7a as respostas a seguir. Essas respostas s\u00e3o usadas para verificar sua identidade no caso de contato com o suporte t\u00e9cnico para assist\u00eancia.</p>
+Display_SetupHelpdeskResponses=<p>O administrador precisa que voc\u00ea forne\u00e7a as respostas a seguir. Essas respostas s\u00e3o usadas para verificar sua identidade caso voc\u00ea contate o suporte t\u00e9cnico para assist\u00eancia.</p>
 Display_SetupRandomResponses=
 Display_SetupRequiredResponses=
 Display_SetupResponses=<p>Se esquecer a senha, voc\u00ea poder\u00e1 acessar a conta respondendo \u00e0s perguntas de seguran\u00e7a.</p><p>Escolha as perguntas e as respostas que podem ser usadas para verificar sua identidade caso voc\u00ea esque\u00e7a a senha. Como as respostas a essas perguntas podem ser usadas para acessar a sua conta, forne\u00e7a respostas que n\u00e3o sejam f\u00e1ceis de adivinhar ou descobrir.</p>
@@ -164,9 +166,9 @@ Display_SetupOtp_iPhone_Steps=<b>No iPhone, toque no \u00edcone App Store.</b><o
 Display_SetupOtp_Other_Title=Outro
 Display_SetupOtp_Other_Steps=<b>Encontre um aplicativo de dois fatores compat\u00edvel.</b><ul><li>Tente pesquisar na loja de aplicativos do dispositivo o <b>Google Authenticator</b>.<br/>Muitos dispositivos t\u00eam aplicativos compat\u00edveis.</li><li>Tente procurar um aplicativo que suporte "<b>tokens de seguran\u00e7a TOTP"</b> ou "RFC6238"</li><li>Fa\u00e7a download e instale o aplicativo.</li></ul><b>Em seguida, abra e configure o aplicativo.</b><ol><li>Digite os dados abaixo ou leia o c\u00f3digo conforme as instru\u00e7\u00f5es do aplicativo.</li><li>Depois de ter configurado o aplicativo, clique no bot\u00e3o Continuar.</li></ol>
 Display_TokenDestination=Destino do Token
-Display_UsernameHeader=@User:ID@
-Display_UsernameFooter=@User:ID@
-Display_WarnExistingOtpSecretTime=Voc\u00ea j\u00e1 inscreveu seu dispositivo em <span class="timestamp">%1%</span>. \u00c9 poss\u00edvel testar o dispositivo atual digitando o c\u00f3digo gerado abaixo. Se continuar, voc\u00ea poder\u00e1 reconfigurar o dispositivo atual.
+Display_UsernameHeader=@User\:ID@
+Display_UsernameFooter=@User\:ID@
+Display_WarnExistingOtpSecretTime=Voc\u00ea j\u00e1 registrou seu dispositivo em <span class\="timestamp">%1%</span>. \u00c9 poss\u00edvel testar o dispositivo atual digitando o c\u00f3digo gerado abaixo. Se continuar, voc\u00ea poder\u00e1 reconfigurar o dispositivo atual.
 Display_WarnExistingOtpSecret=Voc\u00ea j\u00e1 inscreveu seu dispositivo.  \u00c9 poss\u00edvel testar o dispositivo atual digitando o c\u00f3digo gerado abaixo. Se continuar, ser\u00e1 poss\u00edvel reconfigurar o dispositivo atual.
 Display_WarnExistingResponseTime=Voc\u00ea j\u00e1 configurou as respostas para a pergunta/resposta de verifica\u00e7\u00e3o em <span class\="timestamp">%1%</span>. Se continuar, voc\u00ea poder\u00e1 responder \u00e0s perguntas novamente.
 Display_WarnExistingResponse=Voc\u00ea j\u00e1 configurou as respostas para a pergunta/resposta de verifica\u00e7\u00e3o. Se continuar, ser\u00e1 poss\u00edvel responder \u00e0s perguntas novamente.
@@ -237,6 +239,7 @@ Field_VerificationMethodChallengeResponses=Perguntas e Respostas Secretas
 Field_VerificationMethodAttributes=Dados Pessoais
 Field_VerificationMethodRemoteResponses=Respostas Externas
 Field_VerificationMethodNAAF=Autentica\u00e7\u00e3o Avan\u00e7ada
+Field_VerificationMethodOAuth=Autentica\u00e7\u00e3o Externa
 Field_Placeholder_Answer=Resposta
 Long_Title_ActivateUser=Ative uma conta pr\u00e9-configurada e estabele\u00e7a uma nova senha.
 Long_Title_Admin=Fun\u00e7\u00f5es administrativas
@@ -256,6 +259,7 @@ Long_Title_Shortcuts=Atalhos personalizados.
 Long_Title_UpdateProfile=Atualize os dados do perfil de usu\u00e1rio.
 Long_Title_UserEventHistory=Hist\u00f3rico de eventos de senha. Veja quando voc\u00ea mudou sua senha no passado.
 Long_Title_UserInformation=Informa\u00e7\u00f5es sobre sua senha e pol\u00edticas de senha.
+Long_Title_DeleteAccount=Remova sua conta e seu perfil deste servi\u00e7o
 Long_Title_VerificationSend=Esse usu\u00e1rio s\u00f3 poder\u00e1 ser selecionado depois que a identidade dele for verificada. Selecione um m\u00e9todo de verifica\u00e7\u00e3o.
 Title_AnsweredQuestions=Perguntas Respondidas
 Title_ActivateUser=Ativar Conta
@@ -273,6 +277,7 @@ Title_Helpdesk=Suporte T\u00e9cnico
 Title_LocaleSelect=Sele\u00e7\u00e3o de Idioma
 Title_Login=Entre
 Title_Logout=Sair
+Title_LogoutPublic=Tempo de Espera Inativo
 Title_MainPage=Menu Principal
 Title_NewUser=Registro de Novo Usu\u00e1rio
 Title_OrgChart=Organograma
@@ -299,10 +304,15 @@ Title_TitleBarAuthenticated=@User\:ID@  Autoatendimento de Senha
 Title_TitleBar=Autoatendimento de Senha
 Title_UpdateProfile=Atualizar Perfil
 Title_UpdateProfileConfirm=Confirmar Dados do Perfil
+Title_UserData=Meus Dados
 Title_UserEventHistory=Hist\u00f3rico de Senhas
 Title_UserInformation=Minha Conta
 Title_ValidateCode=Validar C\u00f3digo
 Title_VerificationSend=Selecionar m\u00e9todo de verifica\u00e7\u00e3o
+Title_DeleteAccount=Apagar Minha Conta
+Title_Management=Gerenciamento
+Title_DirectReports=Reporta-se a
+Title_Organization=Organiza\u00e7\u00e3o
 Tooltip_PasswordStrength=O medidor de for\u00e7a da senha mostra o quanto \u00e9 f\u00e1cil adivinhar sua senha. Tente o seguinte para tornar sua senha mais forte\:<ul><li>Torne a senha mais longa</li><li>N\u00e3o repita letras nem n\u00fameros</li><li>Use letras mai\u00fasculas e min\u00fasculas</li><li>Adicione mais n\u00fameros</li><li>Adicione mais caracteres de s\u00edmbolo</li></ul>
 Confirm_DeleteUser=Tem certeza de que deseja continuar? Se continuar, o usu\u00e1rio selecionado ser\u00e1 apagado permanentemente. Isso n\u00e3o pode ser desfeito.
 Confirm=Tem certeza de que deseja continuar?
