--- a/src/main/resources/password/pwm/i18n/Display_zh_CN.properties
+++ b/src/main/resources/password/pwm/i18n/Display_zh_CN.properties
@@ -1,4 +1,4 @@
-#Mon, 04 Apr 2016 05:53:55 -0400
+#Tue, 08 Nov 2016 18:41:50 -0500
 #
 # Password Management Servlets (PWM)
 # http://www.pwm-project.org
@@ -81,6 +81,7 @@ Display_CommunicationError=\u65e0\u6cd5\u4e0e\u670d\u52a1\u5668\u901a\u4fe1\u300
 Display_ConfirmResponses=\u8bf7\u786e\u4fdd\u60a8\u7684\u7b54\u6848\u548c\u95ee\u9898\u662f\u6b63\u786e\u7684\u3002\u8bf7\u68c0\u67e5\u62fc\u5199\u548c\u6807\u70b9\u7b26\u53f7\u3002\u5982\u679c\u5fd8\u8bb0\u53e3\u4ee4\uff0c\u5219\u9700\u63d0\u4f9b\u4ee5\u4e0b\u5b89\u5168\u6027\u95ee\u9898\u7684\u7b54\u6848\u624d\u80fd\u8bbf\u95ee\u5e10\u6237\u3002
 Display_Day=\u5929
 Display_Days=\u5929
+Display_DeleteUserConfirm=\u662f\u5426\u786e\u5b9e\u8981\u5220\u9664\u60a8\u7684\u5e10\u6237\uff1f\u6b64\u64cd\u4f5c\u65e0\u6cd5\u64a4\u6d88\u3002
 Display_ErrorBody=\u51fa\u73b0\u9519\u8bef\u3002\u8bf7\u5173\u95ed\u6d4f\u89c8\u5668\u5e76\u7a0d\u540e\u91cd\u8bd5\u3002\u5982\u679c\u6b64\u9519\u8bef\u53cd\u590d\u51fa\u73b0\uff0c\u8bf7\u8054\u7cfb\u54a8\u8be2\u53f0\u3002
 Display_ErrorReference=\u9519\u8bef\u53c2\u7167 %1%
 Display_ExpirationDate=\u5e10\u6237\u5931\u6548\u65e5\u671f\uff08\u6700\u591a %1% \u5929\uff09
@@ -94,13 +95,14 @@ Display_HelpdeskOtpValidation=\u6307\u5bfc\u7528\u6237\u88c5\u8f7d\u4ed6\u4eec\u
 Display_Hour=\u5c0f\u65f6
 Display_Hours=\u5c0f\u65f6
 Display_IdleTimeout=\u7a7a\u95f2\u8d85\u65f6\uff1a
-Display_IdleWarningMessage=\u60a8\u7684\u6d4f\u89c8\u5668\u4f1a\u8bdd\u5373\u5c06\u8d85\u65f6\u3002\u82e5\u8981\u7ee7\u7eed\uff0c\u8bf7\u5355\u51fb\u6b64\u9875\u9762\u4e0a\u7684\u4efb\u4f55\u5730\u65b9\u3002
+Display_IdleWarningMessage=\u60a8\u7684\u4f1a\u8bdd\u5373\u5c06\u8d85\u65f6\u3002\u82e5\u8981\u7ee7\u7eed\uff0c\u8bf7\u5355\u51fb\u6b64\u9875\u9762\u4e0a\u7684\u4efb\u4f55\u5730\u65b9\u3002
 Display_IdleWarningTitle=\u7a7a\u95f2\u8d85\u65f6
 Display_JavascriptRequired=\u9700\u8981 Javascript \u624d\u80fd\u67e5\u770b\u6b64\u9875\u9762\u3002
 Display_LeaveDirtyPasswordPage=\u5982\u679c\u60a8\u79bb\u5f00\u6b64\u9875\u9762\uff0c\u60a8\u7684\u53e3\u4ee4\u4e0d\u4f1a\u66f4\u6539\u3002
 Display_Login=
 Display_LoginPasswordOnly=\u8bf7\u5728\u4e0b\u9762\u8f93\u5165\u60a8\u7684\u53e3\u4ee4\u3002\u9700\u8981\u5f53\u524d\u53e3\u4ee4\u624d\u80fd\u8bbf\u95ee\u6b64\u5e94\u7528\u7a0b\u5e8f\u3002
-Display_Logout=<b>\u60a8\u73b0\u5728\u5df2\u6ce8\u9500\u3002</b><p/>\u8bf7\u5148\u5173\u95ed\u6240\u6709\u56e0\u7279\u7f51\u6d4f\u89c8\u5668\u7a97\u53e3\uff0c\u7136\u540e\u5c1d\u8bd5\u518d\u6b21\u767b\u5f55\u3002
+Display_Logout=\u60a8\u73b0\u5728\u5df2\u6ce8\u9500\u3002
+Display_LogoutPublic=\u60a8\u7684\u4f1a\u8bdd\u56e0\u957f\u65f6\u95f4\u5904\u4e8e\u975e\u6d3b\u52a8\u72b6\u6001\u800c\u8d85\u65f6\u3002
 Display_Minute=\u5206\u949f
 Display_Minutes=\u5206\u949f
 Display_NAAF_PASSWORD=\u8bf7\u63d0\u4f9b\u60a8\u7684 NAAF \u9274\u5b9a\u53e3\u4ee4\u3002
@@ -129,7 +131,7 @@ Display_PleaseWait=\u6b63\u5728\u88c5\u8f7d...
 Display_PleaseWaitNewUser=\u6b63\u5728\u914d\u7f6e\u60a8\u7684\u65b0\u5e10\u6237\u3002\u6b64\u8fc7\u7a0b\u53ef\u80fd\u9700\u8981\u6570\u5206\u949f\uff0c\u8bf7\u8010\u5fc3\u7b49\u5f85\u3002
 Display_PleaseWaitPassword=\u6b63\u5728\u66f4\u6539\u60a8\u7684\u53e3\u4ee4\u3002\u6b64\u8fc7\u7a0b\u53ef\u80fd\u9700\u8981\u6570\u5206\u949f\uff0c\u8bf7\u8010\u5fc3\u7b49\u5f85\u3002
 Display_Random=\u968f\u673a
-Display_RecoverVerificationChoice=\u8bf7\u9009\u62e9\u4e0b\u5217\u65b9\u6cd5\u4e4b\u4e00\u4ee5\u6821\u9a8c\u60a8\u7684\u8eab\u4efd\u3002
+Display_RecoverVerificationChoice=\u8bf7\u9009\u62e9\u4e0b\u9762\u7684\u4e00\u79cd\u65b9\u6cd5\u6821\u9a8c\u60a8\u7684\u8eab\u4efd\u3002\u6ce8\u610f\uff1a\u5982\u679c\u7ba1\u7406\u5458\u8981\u6c42\u6267\u884c\u591a\u79cd\u5f62\u5f0f\u7684\u6821\u9a8c\uff0c\u60a8\u5c06\u91cd\u65b0\u8fd4\u56de\u5230\u6b64\u9875\u9762\uff0c\u76f4\u5230\u7b26\u5408\u6240\u6709\u6821\u9a8c\u51c6\u5219\u3002
 Display_RecoverTokenSendChoices=\u4e3a\u4e86\u6821\u9a8c\u60a8\u7684\u8eab\u4efd\uff0c\u7cfb\u7edf\u4f1a\u5411\u60a8\u53d1\u9001\u4e00\u4e2a\u5b89\u5168\u4ee3\u7801\u3002\u8bf7\u9009\u62e9\u60a8\u66f4\u613f\u610f\u91c7\u7528\u7684\u5b89\u5168\u4ee3\u7801\u63a5\u6536\u65b9\u6cd5\u3002
 Display_RecoverTokenSendChoiceEmail=\u5c06\u4ee3\u7801\u53d1\u9001\u5230\u60a8\u7684\u5df2\u6ce8\u518c\u7535\u5b50\u90ae\u4ef6\u5730\u5740\u3002
 Display_RecoverTokenSendChoiceSMS=\u4f7f\u7528\u77ed\u4fe1 (SMS) \u5c06\u4ee3\u7801\u53d1\u9001\u5230\u60a8\u7684\u79fb\u52a8\u7535\u8bdd\u3002
@@ -152,7 +154,7 @@ Display_SetRandomPasswordPrompt=\u662f\u5426\u4e3a\u6b64\u7528\u6237\u8bbe\u7f6e
 Display_SearchResultsNone=\u6ca1\u6709\u7ed3\u679c\u3002
 Display_Second=\u79d2
 Display_Seconds=\u79d2
-Display_SetupHelpdeskResponses=<p>\u7ba1\u7406\u5458\u8981\u6c42\u60a8\u63d0\u4f9b\u4e0b\u5217\u7b54\u6848\u3002\u5f53\u60a8\u8054\u7cfb\u54a8\u8be2\u53f0\u4ee5\u83b7\u53d6\u5e2e\u52a9\u65f6\uff0c\u7cfb\u7edf\u53ef\u4ee5\u7528\u6b64\u7b54\u6848\u6821\u9a8c\u60a8\u7684\u8eab\u4efd\u3002</p>
+Display_SetupHelpdeskResponses=<p>\u7ba1\u7406\u5458\u8981\u6c42\u60a8\u63d0\u4f9b\u4e0b\u5217\u7b54\u6848\u3002\u5f53\u60a8\u8054\u7cfb\u54a8\u8be2\u53f0\u4ee5\u83b7\u53d6\u5e2e\u52a9\u65f6\uff0c\u7cfb\u7edf\u53ef\u4ee5\u7528\u8fd9\u4e9b\u7b54\u6848\u6821\u9a8c\u60a8\u7684\u8eab\u4efd\u3002</p>
 Display_SetupRandomResponses=
 Display_SetupRequiredResponses=
 Display_SetupResponses=<p>\u5728\u5fd8\u8bb0\u53e3\u4ee4\u7684\u60c5\u51b5\u4e0b\uff0c\u60a8\u53ef\u4ee5\u901a\u8fc7\u56de\u7b54\u5b89\u5168\u6027\u95ee\u9898\u6765\u8bbf\u95ee\u5e10\u6237\u3002</p><p>\u8bf7\u9009\u62e9\u60a8\u7684\u95ee\u9898\u548c\u7b54\u6848\uff0c\u8fd9\u4e9b\u95ee\u9898\u548c\u7b54\u6848\u53ef\u4ee5\u5728\u60a8\u5fd8\u8bb0\u53e3\u4ee4\u65f6\u7528\u6765\u6821\u9a8c\u60a8\u7684\u8eab\u4efd\u3002\u7531\u4e8e\u8fd9\u4e9b\u95ee\u9898\u7684\u7b54\u6848\u53ef\u4ee5\u7528\u6765\u8bbf\u95ee\u60a8\u7684\u5e10\u6237\uff0c\u8bf7\u52a1\u5fc5\u63d0\u4f9b\u4e0d\u5bb9\u6613\u4e3a\u4ed6\u4eba\u731c\u5230\u6216\u53d1\u73b0\u7684\u7b54\u6848\u3002</P>
@@ -164,9 +166,9 @@ Display_SetupOtp_iPhone_Steps=<b>\u5728\u60a8\u7684 iPhone \u4e0a\uff0c\u70b9\u5
 Display_SetupOtp_Other_Title=\u5176\u4ed6
 Display_SetupOtp_Other_Steps=<b>\u67e5\u627e\u517c\u5bb9\u7684\u53cc\u91cd\u9274\u5b9a\u5e94\u7528\u7a0b\u5e8f\u3002</b><ul><li>\u5c1d\u8bd5\u5728\u60a8\u7684\u8bbe\u5907\u5e94\u7528\u7a0b\u5e8f\u5546\u5e97\u4e2d\u641c\u7d22 <b>Google Authenticator</b>\u3002<br/>\u5f88\u591a\u8bbe\u5907\u90fd\u6709\u517c\u5bb9\u7684\u5e94\u7528\u7a0b\u5e8f\u3002</li><li>\u5c1d\u8bd5\u67e5\u627e\u652f\u6301\u201c<b>TOTP \u5b89\u5168\u4ee4\u724c</b>\u201d\u6216\u201cRFC6238\u201d\u7684\u5e94\u7528\u7a0b\u5e8f</li><li>\u4e0b\u8f7d\u5e76\u5b89\u88c5\u8be5\u5e94\u7528\u7a0b\u5e8f\u3002</li></ul><b>\u63a5\u4e0b\u6765\uff0c\u6253\u5f00\u5e76\u914d\u7f6e\u8be5\u5e94\u7528\u7a0b\u5e8f\u3002</b><ol><li>\u8f93\u5165\u4ee5\u4e0b\u6570\u636e\u6216\u6309\u5e94\u7528\u7a0b\u5e8f\u8bf4\u660e\u626b\u63cf\u4ee3\u7801\u3002</li><li>\u914d\u7f6e\u4e86\u8be5\u5e94\u7528\u7a0b\u5e8f\u540e\uff0c\u8bf7\u5355\u51fb\u201c\u7ee7\u7eed\u201d\u6309\u94ae\u3002</li></ol>
 Display_TokenDestination=\u4ee4\u724c\u76ee\u6807
-Display_UsernameHeader=@User:ID@
-Display_UsernameFooter=@User:ID@
-Display_WarnExistingOtpSecretTime=\u60a8\u5df2\u5728 <span class="timestamp">%1%</span> \u6ce8\u518c\u4e86\u8bbe\u5907\u3002\u60a8\u53ef\u4ee5\u901a\u8fc7\u5728\u4e0b\u9762\u952e\u5165\u751f\u6210\u7684\u4ee3\u7801\u6765\u6d4b\u8bd5\u5f53\u524d\u8bbe\u5907\u3002\u5982\u679c\u7ee7\u7eed\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u914d\u7f6e\u5f53\u524d\u8bbe\u5907\u3002
+Display_UsernameHeader=@User\:ID@
+Display_UsernameFooter=@User\:ID@
+Display_WarnExistingOtpSecretTime=\u60a8\u5df2\u5728 <span class\="timestamp">%1%</span> \u6ce8\u518c\u4e86\u8bbe\u5907\u3002\u60a8\u53ef\u4ee5\u901a\u8fc7\u5728\u4e0b\u9762\u952e\u5165\u751f\u6210\u7684\u4ee3\u7801\u6765\u6d4b\u8bd5\u5f53\u524d\u8bbe\u5907\u3002\u5982\u679c\u7ee7\u7eed\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u914d\u7f6e\u5f53\u524d\u8bbe\u5907\u3002
 Display_WarnExistingOtpSecret=\u60a8\u5df2\u6ce8\u518c\u4e86\u8bbe\u5907\u3002\u60a8\u53ef\u4ee5\u901a\u8fc7\u5728\u4e0b\u9762\u952e\u5165\u751f\u6210\u7684\u4ee3\u7801\u6765\u6d4b\u8bd5\u5f53\u524d\u8bbe\u5907\u3002\u5982\u679c\u7ee7\u7eed\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u914d\u7f6e\u5f53\u524d\u8bbe\u5907\u3002
 Display_WarnExistingResponseTime=\u60a8\u5df2\u5728 <span class\="timestamp">%1%</span> \u8bbe\u7f6e\u8be2\u95ee/\u56de\u7b54\u7b54\u6848\u3002\u5982\u679c\u7ee7\u7eed\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u56de\u7b54\u76f8\u5173\u95ee\u9898\u3002
 Display_WarnExistingResponse=\u60a8\u5df2\u8bbe\u7f6e\u8be2\u95ee/\u56de\u7b54\u7b54\u6848\u3002\u5982\u679c\u7ee7\u7eed\uff0c\u60a8\u53ef\u4ee5\u91cd\u65b0\u56de\u7b54\u76f8\u5173\u95ee\u9898\u3002
@@ -237,6 +239,7 @@ Field_VerificationMethodChallengeResponses=\u673a\u5bc6\u95ee\u9898\u548c\u7b54\
 Field_VerificationMethodAttributes=\u4e2a\u4eba\u6570\u636e
 Field_VerificationMethodRemoteResponses=\u5916\u90e8\u56de\u7b54
 Field_VerificationMethodNAAF=\u9ad8\u7ea7\u9274\u5b9a
+Field_VerificationMethodOAuth=\u5916\u90e8\u9274\u5b9a
 Field_Placeholder_Answer=\u7b54\u6848
 Long_Title_ActivateUser=\u6fc0\u6d3b\u9884\u914d\u7f6e\u5e10\u6237\uff0c\u521b\u5efa\u65b0\u53e3\u4ee4\u3002
 Long_Title_Admin=\u7ba1\u7406\u529f\u80fd
@@ -256,6 +259,7 @@ Long_Title_Shortcuts=\u4e2a\u6027\u5316\u7684\u5feb\u6377\u65b9\u5f0f\u3002
 Long_Title_UpdateProfile=\u66f4\u65b0\u7528\u6237\u914d\u7f6e\u6587\u4ef6\u6570\u636e\u3002
 Long_Title_UserEventHistory=\u53e3\u4ee4\u4e8b\u4ef6\u5386\u53f2\u8bb0\u5f55\u3002\u67e5\u770b\u60a8\u8fc7\u53bb\u66f4\u6539\u53e3\u4ee4\u7684\u65f6\u95f4\u3002
 Long_Title_UserInformation=\u53e3\u4ee4\u548c\u53e3\u4ee4\u7b56\u7565\u76f8\u5173\u4fe1\u606f\u3002
+Long_Title_DeleteAccount=\u4ece\u6b64\u670d\u52a1\u4e2d\u53bb\u9664\u60a8\u7684\u5e10\u6237\u548c\u914d\u7f6e\u6587\u4ef6
 Long_Title_VerificationSend=\u5728\u9009\u62e9\u6b64\u7528\u6237\u4e4b\u524d\uff0c\u5fc5\u987b\u6821\u9a8c\u8be5\u7528\u6237\u7684\u8eab\u4efd\u3002\u8bf7\u9009\u62e9\u4e00\u79cd\u6821\u9a8c\u65b9\u6cd5\u3002
 Title_AnsweredQuestions=\u5df2\u56de\u7b54\u7684\u95ee\u9898
 Title_ActivateUser=\u6fc0\u6d3b\u5e10\u6237
@@ -273,6 +277,7 @@ Title_Helpdesk=\u54a8\u8be2\u53f0
 Title_LocaleSelect=\u533a\u57df\u8bbe\u7f6e\u9009\u62e9
 Title_Login=\u8bf7\u767b\u5f55
 Title_Logout=\u6ce8\u9500
+Title_LogoutPublic=\u975e\u6d3b\u52a8\u8d85\u65f6
 Title_MainPage=\u4e3b\u83dc\u5355
 Title_NewUser=\u65b0\u7528\u6237\u6ce8\u518c
 Title_OrgChart=\u7ec4\u7ec7\u7ed3\u6784\u56fe
@@ -299,10 +304,15 @@ Title_TitleBarAuthenticated=@User\:ID@ \u53e3\u4ee4\u81ea\u52a9\u670d\u52a1
 Title_TitleBar=\u53e3\u4ee4\u81ea\u52a9\u670d\u52a1
 Title_UpdateProfile=\u66f4\u65b0\u914d\u7f6e\u6587\u4ef6
 Title_UpdateProfileConfirm=\u786e\u8ba4\u914d\u7f6e\u6587\u4ef6\u6570\u636e
+Title_UserData=\u6211\u7684\u6570\u636e
 Title_UserEventHistory=\u53e3\u4ee4\u5386\u53f2\u8bb0\u5f55
 Title_UserInformation=\u6211\u7684\u5e10\u6237
 Title_ValidateCode=\u9a8c\u8bc1\u4ee3\u7801
 Title_VerificationSend=\u9009\u62e9\u6821\u9a8c\u65b9\u6cd5
+Title_DeleteAccount=\u5220\u9664\u6211\u7684\u5e10\u6237
+Title_Management=\u7ba1\u7406
+Title_DirectReports=\u76f4\u63a5\u4e0b\u5c5e
+Title_Organization=\u7ec4\u7ec7
 Tooltip_PasswordStrength=\u53e3\u4ee4\u5f3a\u5ea6\u8868\u793a\u731c\u51fa\u53e3\u4ee4\u7684\u96be\u5ea6\u3002\u8bf7\u5c1d\u8bd5\u4e0b\u5217\u64cd\u4f5c\u4ee5\u589e\u52a0\u53e3\u4ee4\u5f3a\u5ea6\uff1a<ul><li>\u589e\u52a0\u53e3\u4ee4\u957f\u5ea6</li><li>\u4e0d\u91cd\u590d\u4f7f\u7528\u5b57\u6bcd\u6216\u6570\u5b57</li><li>\u4f7f\u7528\u6df7\u5408\u4e86\u5927\u5c0f\u5199\u7684\u5b57\u6bcd</li><li>\u6dfb\u52a0\u66f4\u591a\u6570\u5b57</li><li>\u6dfb\u52a0\u66f4\u591a\u7b26\u53f7\u5b57\u7b26</li></ul>
 Confirm_DeleteUser=\u662f\u5426\u786e\u5b9e\u8981\u7ee7\u7eed\uff1f\u5982\u679c\u7ee7\u7eed\uff0c\u7cfb\u7edf\u5c06\u6c38\u4e45\u5220\u9664\u9009\u5b9a\u7528\u6237\u3002\u6b64\u64cd\u4f5c\u65e0\u6cd5\u64a4\u6d88\u3002
 Confirm=\u662f\u5426\u786e\u5b9e\u8981\u7ee7\u7eed\uff1f
