--- a/src/main/resources/password/pwm/i18n/Error_it.properties
+++ b/src/main/resources/password/pwm/i18n/Error_it.properties
@@ -157,6 +157,7 @@ Error_NoProfileAssigned=Nessun profilo assegnato all'operazione.
 Error_StartupError=Errore nell'avvio dell'applicazione. Per informazioni, vedere i file di log.
 Error_EnvironmentError=Errore nell'ambiente applicativo che ha impedito l'avvio dell'applicazione.
 Error_ApplicationNotRunning=La funzionalit\u00e0 non \u00e8 disponibile poich\u00e9 la configurazione dell'applicazione \u00e8 soggetta a restrizioni.
+Error_EmailSendFailure=Errore nell'invio dell'elemento e-mail %1%. Errore: %2%
 
 Error_RemoteErrorValue=Errore remoto: %1%
 
