--- a/src/main/resources/password/pwm/i18n/Error_zh_CN.properties
+++ b/src/main/resources/password/pwm/i18n/Error_zh_CN.properties
@@ -77,7 +77,7 @@ Error_Missing_Challenge_Text=\u7f3a\u5c11\u7528\u6237\u6240\u63d0\u4f9b\u95ee\u9
 Error_UserAuthenticated=\u60a8\u5df2\u901a\u8fc7\u9274\u5b9a\u3002
 Error_MissingParameter=\u7f3a\u5931\u8981\u6c42\u7684\u53c2\u6570\u3002
 Error_DirectoryUnavailable=\u76ee\u5f55\u4e0d\u53ef\u7528\u3002\u5982\u679c\u6b64\u9519\u8bef\u53cd\u590d\u51fa\u73b0\uff0c\u8bf7\u8054\u7cfb\u54a8\u8be2\u53f0\u3002
-Error_Unknown=\u53d1\u751f\u9519\u8bef\u3002\u5982\u679c\u6b64\u9519\u8bef\u91cd\u590d\u53d1\u751f\uff0c\u8bf7\u8054\u7cfb\u54a8\u8be2\u53f0\u3002
+Error_Unknown=\u53d1\u751f\u9519\u8bef\u3002\u5982\u679c\u6b64\u9519\u8bef\u53cd\u590d\u51fa\u73b0\uff0c\u8bf7\u8054\u7cfb\u54a8\u8be2\u53f0\u3002
 Error_ActivationValidationFailed=\u4e00\u4e2a\u6216\u591a\u4e2a\u503c\u4e0d\u6b63\u786e\u3002
 Error_CantMatchUser=\u627e\u4e0d\u5230\u7528\u6237\u540d\u3002\u8bf7\u91cd\u8bd5\u3002
 Error_ServiceNotAvailable=\u672a\u542f\u7528\u670d\u52a1\u3002
@@ -94,7 +94,7 @@ Error_BadSession=\u65e0\u6cd5\u4e0e\u60a8\u7684\u6d4f\u89c8\u5668\u5efa\u7acb\u4
 Error_MissingRequiredResponse=\u8bf7\u952e\u5165\u6240\u6709\u5fc5\u8981\u7684\u56de\u7b54\u3002
 Error_MissingRandomResponse=\u8bf7\u6dfb\u52a0\u4e00\u4e2a\u989d\u5916\u7684\u968f\u673a\u56de\u7b54\u3002
 Error_BadCaptchaResponse=\u6821\u9a8c\u7801\u4e0d\u6b63\u786e\uff0c\u8bf7\u91cd\u8bd5\u3002
-Error_CaptchaAPIError=\u5bf9\u56de\u7b54\u7684\u9a8c\u8bc1\u7801\u8fdb\u884c\u9a8c\u8bc1\u65f6\u51fa\u9519\u3002\u8bf7\u5173\u95ed\u60a8\u7684\u6d4f\u89c8\u5668\uff0c\u7136\u540e\u91cd\u8bd5\u3002\u5982\u679c\u6b64\u9519\u8bef\u53cd\u590d\u51fa\u73b0\uff0c\u8bf7\u8054\u7cfb\u54a8\u8be2\u53f0\u3002
+Error_CaptchaAPIError=\u5bf9 CAPTCHA \u54cd\u5e94\u8fdb\u884c\u9a8c\u8bc1\u65f6\u51fa\u9519\u3002\u8bf7\u5173\u95ed\u60a8\u7684\u6d4f\u89c8\u5668\uff0c\u7136\u540e\u91cd\u8bd5\u3002\u5982\u679c\u6b64\u9519\u8bef\u53cd\u590d\u51fa\u73b0\uff0c\u8bf7\u8054\u7cfb\u54a8\u8be2\u53f0\u3002
 Error_InvalidConfig=\u914d\u7f6e\u65e0\u6548\u6216\u635f\u574f\u3002\u8bf7\u66f4\u6b63\u9519\u8bef\uff0c\u6216\u53bb\u9664\u914d\u7f6e\u6587\u4ef6\u3002
 Error_InvalidFormID=\u6d4f\u89c8\u5668\u4f1a\u8bdd\u65e0\u6548\u6216\u5931\u6548\u3002\u8bf7\u91cd\u8bd5\u3002
 Error_TokenMissingContact=\u60a8\u7684\u5e10\u6237\u6ca1\u6709\u4efb\u4f55\u53ef\u7528\u7684\u8054\u7cfb\u4fe1\u606f\u3002\u8bf7\u8054\u7cfb\u7ba1\u7406\u5458\u3002
@@ -157,6 +157,7 @@ Error_NoProfileAssigned=\u6ca1\u6709\u4e3a\u6b64\u64cd\u4f5c\u6307\u6d3e\u914d\u
 Error_StartupError=\u542f\u52a8\u8be5\u5e94\u7528\u7a0b\u5e8f\u65f6\u51fa\u9519\u3002\u8bf7\u68c0\u67e5\u65e5\u5fd7\u6587\u4ef6\u4ee5\u83b7\u53d6\u76f8\u5173\u4fe1\u606f\u3002
 Error_EnvironmentError=\u5e94\u7528\u7a0b\u5e8f\u73af\u5883\u51fa\u9519\uff0c\u5bfc\u81f4\u8be5\u5e94\u7528\u7a0b\u5e8f\u65e0\u6cd5\u542f\u52a8\u3002
 Error_ApplicationNotRunning=\u5728\u5bf9\u5e94\u7528\u7a0b\u5e8f\u914d\u7f6e\u8fdb\u884c\u9650\u5236\u4e4b\u524d\uff0c\u6b64\u529f\u80fd\u4e0d\u53ef\u7528\u3002
+Error_EmailSendFailure=\u53d1\u9001\u7535\u5b50\u90ae\u4ef6\u9879 %1% \u65f6\u51fa\u9519\uff0c\u9519\u8bef\uff1a%2%
 
 Error_RemoteErrorValue=\u8fdc\u7a0b\u9519\u8bef\uff1a%1%
 
